--- a/Kaiserreich Korean Translation/localisation/frontend_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/frontend_l_english.yml
@@ -1,181 +1,181 @@
-﻿l_english:
- MATCHMAKING_FILTER_NOPASSWORD:0 "No password"
- MATCHMAKING_FILTER_NOTFULL:0 "Not Full"
- MATCHMAKING_FILTER_HASPLAYERS:0 "Has Players"
- MATCHMAKING_FILTER_MOD:0 "MOD"
- MATCHMAKING_FILTER_VERSION:0 "Version"
- MATCHMAKING_SERVER_FILTER_NAME:0 "Name"
- MATCHMAKING_SERVER_FILTER_SEARCH:0 "Tags"
- MATCHMAKING_SERVERS_DOSEARCH:0 "Search"
- MATCHMAKING_SERVERS_DOFILTERS:0 "Filter"
- MATCHMAKING_QUICK_REFRESH:0 "Quick refresh"
- MATCHMAKING_REFRESH_LAN:0 "Refresh LAN"
- MATCHMAKING_REFRESH_LAN_STOP:0 "Stop"
- MATCHMAKING_REFRESH_INTERNET:0 "Refresh Internet"
- MATCHMAKING_JOIN_SERVER:0 "Join"
- MATCHMAKING_HOST_SERVER:0 "Host"
- MATCHMAKING_SERVER_PASSWORD:0 "Password"
- MATCHMAKING_SERVER_NAME:0 "Name"
- MATCHMAKING_SERVER_SLOTS:0 "Slots"
- MATCHMAKING_SERVER_VERSION:0 "Version"
- MATCHMAKING_SERVER_TAGS:0 "Tags"
- MATCHMAKING_SERVER_HOST_TAGS:0 "Server Tags"
- MATCHMAKING_SERVER_HOST_TITLE:0 "Host Server"
- MATCHMAKING_SERVER_MOD:0 "MOD"
- MATCHMAKING_SERVER_STATUS:0 "Status"
- MATCHMAKING_CLIENT_STATUS:0 "Status:"
- MATCHMAKING_CLIENT_STATUS_IDLE:0 "Idle"
- MATCHMAKING_CLIENT_STATUS_SCAN:0 "Scanning..."
- MATCHMAKING_SERVER_DESC:0 "Server Description"
- MATCHMAKING_SERVER_CONNECT_TITLE:0 "Connect to Server ID"
- MATCHMAKING_SERVER_CONNECT_ADDRESS:0 "Server ID"
- MATCHMAKING_TITLE:0 "Multiplayer"
- MATCHMAKING_SERVERS:0 "Servers"
- MATCHMAKING_COMMUNITY:0 "Community"
- MATCHMAKING_SERVER_STATUS_STARTING:0 "Starting"
- MATCHMAKING_SERVER_STATUS_RUNNING:0 "Running"
- MATCHMAKING_SERVER_STATUS_STOPPED:0 "Stopped"
- MATCHMAKING_SERVERS_NOSERVERS:0 "No servers found."
- MATCHMAKING_SERVERS_SEARCHING:0 "Searching..."
- MATCHMAKING_SERVER_KICKED:0 "Kicked from server."
- MATCHMAKING_SERVER_BANNED:0 "Banned from server."
- MATCHMAKING_SERVER_BADVERSION:0 "The host has another version of the game"
- MATCHMAKING_SERVER_HOTJOIN_DECLINED:0 "Server has declined the join request"
- MATCHMAKING_SERVER_NAME_TAKEN:0 "Your name is already taken."
- MATCHMAKING_SORT_BY_PASSWORD:0 "Sort by Password"
- SORT_BY_NAME:0 "Sort by Name"
- MATCHMAKING_SORT_BY_MOD:0 "Sort by MOD"
- MATCHMAKING_SORT_BY_VERSION:0 "Sort by Version"
- MATCHMAKING_SORT_BY_TAGS:0 "Sort by Tags"
- MATCHMAKING_SORT_BY_SLOTS:0 "Sort by Slots"
- MATCHMAKING_SORT_BY_STATUS:0 "Sort by Status"
- MATCHMAKING_FILTER_NAMES:0 "Filter by name"
- MATCHMAKING_FILTER_TAGS:0 "Filter by tags"
- SM_OPTIONS:0 "Options"
- SM_GAME:0 "Game"
- SM_VIDEO:0 "Video"
- SM_AUDIO:0 "Audio"
- SM_CONTROLS:0 "Controls"
- SM_MASTER_VOLUME:0 "Master Volume"
- SM_EFFECT_VOLUME:0 "Effect Volume"
- SM_MUSIC_VOLUME:0 "Music Volume"
- SM_SCROLL_SPEED:0 "Scroll Speed"
- SM_ZOOM_SPEED:0 "Zoom Speed"
- SM_MOUSE_SPEED:0 "Mouse Speed"
- SM_MODE:0 "Mode"
- SM_RESOLUTION:0 "Resolution"
- SM_REFRESH_RATE:0 "Refresh Rate"
- SM_GAMMA:0 "Gamma"
- SM_GAMMA_TOOLTIP:1 "Enabled in fullscreen mode"
- SM_SHADOWS:0 "Shadows"
- SM_WINDOWED:0 "Windowed"
- SM_FULLSCREEN:0 "Fullscreen"
- SM_BORDERLESS:0 "Borderless"
- SM_NATIVE:0 "Desktop"
- SM_TREES:0 "3D Trees"
- SM_SKIP_SETUP:0 "Skip simple setup"
- SM_DECORATIVE_MAPITEMS:0 "Decorative Map Items"
- SM_DIFFICULTY:0 "Difficulty"
- SM_AUTOSAVE_INTERVAL:0 "Autosave Interval"
- SM_APPLY:0 "Apply"
- SM_ALERT:0 "Alert"
- SM_RESTART:0 "You need to restart for the change to take effect."
- SM_WP:0 "Error writing to the settings-file. Check that the file is not write protected and try again"
- SM_MULTISAMPLE:0 "Multisample Level"
- SM_AMBIENT_OBJECTS:0 "Ambient Objects"
- SM_VOICE_VOLUME:0 "Voice Volume"
- SM_VSYNC:0 "VSync"
- SM_WEATHER:0 "Weather"
- SM_WATER_REFL:0 "Reflections"
- SM_TEX_QUALITY:0 "Texture Quality"
- SM_TEX_QUALITY_LOW:0 "Low"
- SM_TEX_QUALITY_MEDIUM:0 "Medium"
- SM_TEX_QUALITY_HIGH:0 "High"
- SM_UI_SCALING:0 "UI Scaling (Experimental)"
- SM_CITIES:0 "Cities"
- SM_UNITS:0 "3D Units"
- SM_BUILDINGS:0 "3D Buildings"
- SM_RIVERS:0 "Rivers"
- SM_HIGH_GFX_SHADERS:0 "High quality pixel shaders"
- SM_FULL_MAP_RES:0 "Full rendering resolution"
- RESTART_REQ:0 "Restart Required"
- RESTART_REQ_DESC:0 "You must restart the game for these changes to take effect."
- NEVER:0 "Never"
- MONTHLY:0 "Monthly"
- HALFYEAR:0 "Half Year"
- YEARLY:0 "Yearly"
- FE_HOTJOIN_LABEL:0 "Hotjoin"
- FE_COOP_LABEL:0 "Cooperative"
- FE_COOP_LABEL_DESC:0 "Enables multiple players controlling 1 nation"
- FE_HOTJOIN_TOOLTIP:0 "Allow players to hotjoin"
- FE_COOP_TOOLTIP:0 "Allow players to play the same country"
- HINTS_ACTIVE:0 "Hints Active"
- NATO_COUNTERS:0 "Use NATO symbols"
- PAUSE_ON_POPUPS:0 "Pause on notifications"
- PAUSE_ON_POPUPS_DESC:0 "Pause on popup notifications. Will not affect events."
- EXTERNAL_BROWSER:0 "Use external web browser"
- HOME_WIKI:0 "Use offline wiki as default"
- BAD_SERVER_PASSWORD:0 "Password incorrect"
- PLAYER_BANNED:0 "$NAME$ was banned by the host."
- PLAYER_KICKED:0 "$NAME$ was kicked by the host."
- FE_START:0 "START"
- FE_YES:0 "Yes"
- FE_NO:0 "No"
- YES:0 "Yes"
- NO:0 "No"
- FE_DIFFICULTY_CUSTOM:0 "Custom Settings"
- FE_DIFFICULTY:0 "Difficulty"
- FE_DIFFICULTY_EASY:1 "Recruit"
- FE_DIFFICULTY_EASY_TOOLTIP:0 ""I have full confidence in your courage, devotion to duty, and skill in battle. We will accept nothing less than full victory. Good Luck!""
- FE_DIFFICULTY_NORMAL:1 "Regular"
- FE_DIFFICULTY_NORMAL_TOOLTIP:0 ""For the enemy is strong. He may hurl back our forces. Success may not come with rushing speed, but we shall return again and again.""
- FE_DIFFICULTY_HARD:1 "Veteran"
- FE_DIFFICULTY_HARD_TOOLTIP:0 ""I have nothing to offer but blood, toil, tears, and sweat.""
- FE_DIFFICULTY_UNKNOWN:0 "Secret Difficulty"
- FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP:0 "\n\nPlayer:\n$PLAYERMOD$"
+l_english:
+ MATCHMAKING_FILTER_NOPASSWORD:0 "암호 없음"
+ MATCHMAKING_FILTER_NOTFULL:0 "자리 있음"
+ MATCHMAKING_FILTER_HASPLAYERS:0 "플레이어 있음"
+ MATCHMAKING_FILTER_MOD:0 "모드"
+ MATCHMAKING_FILTER_VERSION:0 "버전"
+ MATCHMAKING_SERVER_FILTER_NAME:0 "이름"
+ MATCHMAKING_SERVER_FILTER_SEARCH:0 "태그"
+ MATCHMAKING_SERVERS_DOSEARCH:0 "검색"
+ MATCHMAKING_SERVERS_DOFILTERS:0 "필터"
+ MATCHMAKING_QUICK_REFRESH:0 "빠른 새로고침"
+ MATCHMAKING_REFRESH_LAN:0 "LAN 새로고침"
+ MATCHMAKING_REFRESH_LAN_STOP:0 "중지"
+ MATCHMAKING_REFRESH_INTERNET:0 "인터넷 새로고침"
+ MATCHMAKING_JOIN_SERVER:0 "참여"
+ MATCHMAKING_HOST_SERVER:0 "호스트"
+ MATCHMAKING_SERVER_PASSWORD:0 "암호"
+ MATCHMAKING_SERVER_NAME:0 "이름"
+ MATCHMAKING_SERVER_SLOTS:0 "슬롯"
+ MATCHMAKING_SERVER_VERSION:0 "버전"
+ MATCHMAKING_SERVER_TAGS:0 "태그"
+ MATCHMAKING_SERVER_HOST_TAGS:0 "서버 태그"
+ MATCHMAKING_SERVER_HOST_TITLE:0 "호스트 서버"
+ MATCHMAKING_SERVER_MOD:0 "모드"
+ MATCHMAKING_SERVER_STATUS:0 "상태"
+ MATCHMAKING_CLIENT_STATUS:0 "상태:"
+ MATCHMAKING_CLIENT_STATUS_IDLE:0 "대기"
+ MATCHMAKING_CLIENT_STATUS_SCAN:0 "탐색 중..."
+ MATCHMAKING_SERVER_DESC:0 "서버 설명"
+ MATCHMAKING_SERVER_CONNECT_TITLE:0 "서버 ID로 연결"
+ MATCHMAKING_SERVER_CONNECT_ADDRESS:0 "서버 ID"
+ MATCHMAKING_TITLE:0 "여럿이서 하기"
+ MATCHMAKING_SERVERS:0 "서버"
+ MATCHMAKING_COMMUNITY:0 "커뮤니티"
+ MATCHMAKING_SERVER_STATUS_STARTING:0 "시작중"
+ MATCHMAKING_SERVER_STATUS_RUNNING:0 "진행중"
+ MATCHMAKING_SERVER_STATUS_STOPPED:0 "중단됨"
+ MATCHMAKING_SERVERS_NOSERVERS:0 "서버를 찾지 못함."
+ MATCHMAKING_SERVERS_SEARCHING:0 "찾는 중..."
+ MATCHMAKING_SERVER_KICKED:0 "서버로부터 추방 됨."
+ MATCHMAKING_SERVER_BANNED:0 "서버로부터 차단 됨."
+ MATCHMAKING_SERVER_BADVERSION:0 "호스트의 게임 버전이 다릅니다"
+ MATCHMAKING_SERVER_HOTJOIN_DECLINED:0 "서버가 참가 요청을 거부 했습니다"
+ MATCHMAKING_SERVER_NAME_TAKEN:0 "이미 사용 중인 이름입니다."
+ MATCHMAKING_SORT_BY_PASSWORD:0 "암호로 정렬"
+ SORT_BY_NAME:0 "이름으로 정렬"
+ MATCHMAKING_SORT_BY_MOD:0 "MOD로 정렬"
+ MATCHMAKING_SORT_BY_VERSION:0 "버전으로 정렬"
+ MATCHMAKING_SORT_BY_TAGS:0 "태그로 정렬"
+ MATCHMAKING_SORT_BY_SLOTS:0 "슬롯으로 정렬"
+ MATCHMAKING_SORT_BY_STATUS:0 "상태로 정렬"
+ MATCHMAKING_FILTER_NAMES:0 "이름으로 거름"
+ MATCHMAKING_FILTER_TAGS:0 "태그로 거름"
+ SM_OPTIONS:0 "옵션"
+ SM_GAME:0 "게임"
+ SM_VIDEO:0 "비디오"
+ SM_AUDIO:0 "오디오"
+ SM_CONTROLS:0 "콘트롤"
+ SM_MASTER_VOLUME:0 "마스터 볼륨"
+ SM_EFFECT_VOLUME:0 "효과음 볼륨"
+ SM_MUSIC_VOLUME:0 "음악 볼륨"
+ SM_SCROLL_SPEED:0 "스크롤 속도"
+ SM_ZOOM_SPEED:0 "줌 속도"
+ SM_MOUSE_SPEED:0 "마우스 속도"
+ SM_MODE:0 "창 모드"
+ SM_RESOLUTION:0 "해상도"
+ SM_REFRESH_RATE:0 "주사율"
+ SM_GAMMA:0 "감마"
+ SM_GAMMA_TOOLTIP:1 "전체화면 모드 활성화됨"
+ SM_SHADOWS:0 "그림자"
+ SM_WINDOWED:0 "창모드"
+ SM_FULLSCREEN:0 "전체화면"
+ SM_BORDERLESS:0 "경계 없는 창모드"
+ SM_NATIVE:0 "바탕화면"
+ SM_TREES:0 "3D 나무"
+ SM_SKIP_SETUP:0 "간이 설정을 생략"
+ SM_DECORATIVE_MAPITEMS:0 "지도 장식물"
+ SM_DIFFICULTY:0 "난이도"
+ SM_AUTOSAVE_INTERVAL:0 "자동 저장 간격"
+ SM_APPLY:0 "적용"
+ SM_ALERT:0 "경고"
+ SM_RESTART:0 "재시작을 해야만 변경사항이 적용 됩니다."
+ SM_WP:0 "설정 파일에 쓰는 동안 오류가 발생했습니다. 파일에 쓰기 보호되어 있지 않은지 확인하고 다시 시도하십시오"
+ SM_MULTISAMPLE:0 "멀티샘플 레벨"
+ SM_AMBIENT_OBJECTS:0 "음영 효과"
+ SM_VOICE_VOLUME:0 "음성 볼륨"
+ SM_VSYNC:0 "수직동기화"
+ SM_WEATHER:0 "날씨"
+ SM_WATER_REFL:0 "수면 반사"
+ SM_TEX_QUALITY:0 "텍스쳐 품질"
+ SM_TEX_QUALITY_LOW:0 "낮음"
+ SM_TEX_QUALITY_MEDIUM:0 "중간"
+ SM_TEX_QUALITY_HIGH:0 "높음"
+ SM_UI_SCALING:0 "UI 스케일링 (실험)"
+ SM_CITIES:0 "도시"
+ SM_UNITS:0 "3D 유닛"
+ SM_BUILDINGS:0 "3D 건물"
+ SM_RIVERS:0 "강"
+ SM_HIGH_GFX_SHADERS:0 "고품질 픽셀 쉐이더"
+ SM_FULL_MAP_RES:0 "전체 렌더링 해상도"
+ RESTART_REQ:0 "재시작이 필요합니다"
+ RESTART_REQ_DESC:0 "변경사항을 적용하려면 게임을 재시작해야 합니다."
+ NEVER:0 "하지않음"
+ MONTHLY:0 "매 달"
+ HALFYEAR:0 "반년"
+ YEARLY:0 "매 년"
+ FE_HOTJOIN_LABEL:0 "빠른 참가"
+ FE_COOP_LABEL:0 "협력 플레이"
+ FE_COOP_LABEL_DESC:0 "여러 플레이어가 하나의 국가를 조작 가능하게합니다"
+ FE_HOTJOIN_TOOLTIP:0 "빠른 입장 플레이어 허용"
+ FE_COOP_TOOLTIP:0 "다른 유저가 같은 국가로 플레이 하는 것을 허용"
+ HINTS_ACTIVE:0 "도움말 활성화"
+ NATO_COUNTERS:0 "NATO기호 사용"
+ PAUSE_ON_POPUPS:0 "알림 발생 시 일시정지"
+ PAUSE_ON_POPUPS_DESC:0 "팝업 알림 발생 시 일시정지. 이벤트는 영향을 미치지 않을 것입니다."
+ EXTERNAL_BROWSER:0 "외부 웹 브라우저 사용"
+ HOME_WIKI:0 "오프라인 위키를 기본적으로 사용"
+ BAD_SERVER_PASSWORD:0 "암호 부정확"
+ PLAYER_BANNED:0 "$NAME$가 호스트에게 BAN되었습니다."
+ PLAYER_KICKED:0 "$NAME$가 호스트에게 강퇴되었습니다."
+ FE_START:0 "시작"
+ FE_YES:0 "네"
+ FE_NO:0 "아니요"
+ YES:0 "네"
+ NO:0 "아니요"
+ FE_DIFFICULTY_CUSTOM:0 "커스텀 설정"
+ FE_DIFFICULTY:0 "난이도"
+ FE_DIFFICULTY_EASY:1 "신병"
+ FE_DIFFICULTY_EASY_TOOLTIP:0 "여러분의 용기와 임무에 대한 헌신, 전투의 기술, 나는 그 것들에 절대적인 신뢰를 갖고 있다. 우리가 원하는건 완전한 승리 뿐이다. 건투를 빈다!"
+ FE_DIFFICULTY_NORMAL:1 "일반"
+ FE_DIFFICULTY_NORMAL_TOOLTIP:0 "적은 강합니다. 적은 우리 군을 격퇴 시킬지도 모름니다. 성공은 빨리 돌아오지 않을지도 모르지만, 우리는 다시 또 돌아을 것입니다."
+ FE_DIFFICULTY_HARD:1 "베테랑"
+ FE_DIFFICULTY_HARD_TOOLTIP:0 "내가 내밀 것은 피, 노력, 눈물, 땀 뿐이다."
+ FE_DIFFICULTY_UNKNOWN:0 "비밀 난이도"
+ FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP:0 "\n\n플레이어:\n$PLAYERMOD$"
  FE_DIFFICULTY_MODIFIER_AI_TOOLTIP:0 "\n\nAI:\n$AIMOD$"
- FE_IRONMAN_MP_BLOCKED:0 "§RIronman mode cannot be played in multiplayer.§!"
- FE_CUSTOM_DIFFICULTY_TOOLTIP:0 "Applied to: $COUNTRIES$\n$MODIFIER$"
- FE_RESET:0 "Reset All"
- DAILY:0 "Daily"
- WEEKLY:0 "Weekly"
- GAMESETUP_SELECT_SCENARIO:0 "Select a Scenario or Load a game"
- INTERESTING_COUNTRIES_OTHER_COUNTRIES:0 "Other countries"
- CHAT_WHISPER_TO:0 "To $NAME|H$"
- CHAT_SYSTEM:0 "System Message"
- CHAT_ERROR_UNKNOWNUSER:0 "Unknown User."
- FE_CHANGE_SCENARIO_ONLY_SERVER:0 "§RMay only be changed by the host§!"
- ACHIEVEMENTS_CHEATS:0 "No cheats or modified game/save"
- ACHIEVEMENTS_DIFFICULTY:0 "Regular or higher difficulty"
- ACHIEVEMENTS_OK:0 "§HCan get Achievements!§!"
- ACHIEVEMENTS_NOT_OK:0 "§RCan not currently get Achievements.§!"
- diff_strong_ai_generic:0 "Stronger AI"
- custom_diff_strong_ger:0 "Strengthen Germany"
- custom_diff_strong_ita:0 "Strengthen Italy"
- custom_diff_strong_sov:0 "Strengthen Soviet"
- custom_diff_strong_fra:0 "Strengthen France"
- custom_diff_strong_eng:0 "Strengthen United Kingdom"
- custom_diff_strong_usa:0 "Strengthen USA"
- custom_diff_strong_jap:0 "Strengthen Japan"
- custom_diff_strong_chi:0 "Strengthen China"
- achievement_has_joined_faction:0 "Has joined a faction"
- achievement_has_dropped_nuke:0 "Has used a nuclear bomb"
- achievement_france_surrender:0 "France has surrendered"
- achievement_won_spanish_civil_war:0 "Won the Spanish Civil War"
- achievement_failed_sunset_invasion:0 "Did not follow the Sunset Invasion rules"
- achievement_has_nuked_california:0 "Has dropped a nuclear bomb in California"
- achievement_med_plutonium:0 "Has dropped a nuclear bomb on Denmark."
- POL_vojtek_commander:0 "Discovered how to trigger this achievement."
- SAF_released_ANG:0 "Released Angola"
- SAF_released_MZB:0 "Released Mozambique"
- SAF_released_BOT:0 "Released Botswana"
- SAF_released_ZIM:0 "Released Zimbabwe"
- SAF_released_KEN:0 "Released Kenya"
- SAF_released_COG:0 "Released Congo"
- achievement_AST_nuke_self:0 "Has dropped nuke on Australian core territory."
- achievement_EGY_colony:0 "Reached Colony Status"
- achievement_EGY_dominion:0 "Reached Dominion Status"
- achievement_EGY_free:0 "Reached Freedom Status"
- ROM_lost_starting_state:0 "Romania lost one of its starting states"
- YUG_delcared_war_on_axis_allies:0 "Declared war on Axis or Allies while in either Axis or Allies"
- achievement_carol_II_is_leader:0 "§YCarol II§! is the current country leader"
+ FE_IRONMAN_MP_BLOCKED:0 "§R철인 모드는 멀티 플레이어에서 활성화할 수 없습니다.§!"
+ FE_CUSTOM_DIFFICULTY_TOOLTIP:0 "이곳에 적용됨: $COUNTRIES$\n$MODIFIER$"
+ FE_RESET:0 "전체 초기화"
+ DAILY:0 "매 일"
+ WEEKLY:0 "매 주"
+ GAMESETUP_SELECT_SCENARIO:0 "시나리오를 선택하거나 게임을 불러오기"
+ INTERESTING_COUNTRIES_OTHER_COUNTRIES:0 "다른 국가들"
+ CHAT_WHISPER_TO:0 "$NAME|H$에게"
+ CHAT_SYSTEM:0 "시스템 메세지"
+ CHAT_ERROR_UNKNOWNUSER:0 "알 수 없는 유저"
+ FE_CHANGE_SCENARIO_ONLY_SERVER:0 "§R호스트 이외는 변경할 수 없습니다§!"
+ ACHIEVEMENTS_CHEATS:0 "치트나 게임 및 저장파일 변경이 되지 않음"
+ ACHIEVEMENTS_DIFFICULTY:0 "일반이나 더 높은 난이도"
+ ACHIEVEMENTS_OK:0 "§H업적달성 가능!§!"
+ ACHIEVEMENTS_NOT_OK:0 "§R현재 상태로는 업적달성 불가능.§!"
+ diff_strong_ai_generic:0 "더 강한 AI"
+ custom_diff_strong_ger:0 "독일 강화"
+ custom_diff_strong_ita:0 "이탈리아 강화"
+ custom_diff_strong_sov:0 "소련 강화"
+ custom_diff_strong_fra:0 "프랑스 강화"
+ custom_diff_strong_eng:0 "영국 강화"
+ custom_diff_strong_usa:0 "미국 강화"
+ custom_diff_strong_jap:0 "일본 강화"
+ custom_diff_strong_chi:0 "중국 강화"
+ achievement_has_joined_faction:0 "세력에 참여"
+ achievement_has_dropped_nuke:0 "이(가) 핵 폭탄을 사용했습니다"
+ achievement_france_surrender:0 "프랑스가 항복했습니다"
+ achievement_won_spanish_civil_war:0 "스페인 내전에서 승리했습니다"
+ achievement_failed_sunset_invasion:0 "일몰침략 규정을 지키지 않았습니다"
+ achievement_has_nuked_california:0 "이(가) 캘리포니아에 핵 폭탄을 떨어뜨렸습니다."
+ achievement_med_plutonium:0 "이(가) 덴마크에 핵 폭탄을 떨어뜨렸습니다."
+ POL_vojtek_commander:0 "이 업적을 얻는 방법을 발견했습니다."
+ SAF_released_ANG:0 "앙골라가 해방되었습니다"
+ SAF_released_MZB:0 "모잠비크가 해방되었습니다"
+ SAF_released_BOT:0 "보츠와나가 해방되었습니다"
+ SAF_released_ZIM:0 "짐바브웨가 해방되었습니다"
+ SAF_released_KEN:0 "케냐가 해방되었습니다"
+ SAF_released_COG:0 "콩고가 해방되었습니다"
+ achievement_AST_nuke_self:0 "이(가) 호주의 핵심 영토에 핵을 떨어뜨렸습니다."
+ achievement_EGY_colony:0 "식민지 상태 도달"
+ achievement_EGY_dominion:0 "지배 상태 도달"
+ achievement_EGY_free:0 "자유 상태 도달"
+ ROM_lost_starting_state:0 "루마니아는 시작 상태 중 하나를 잃었다"
+ YUG_delcared_war_on_axis_allies:0 "추축이나 연합에 있는 동안 추축이나 연합에 전쟁선포"
+ achievement_carol_II_is_leader:0 "§Y카를 2세§! 가 현재 국가 지도자입니다."
