--- a/Kaiserreich Korean Translation/localisation/KR_Ausgleich_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ausgleich_l_english.yml
@@ -31,75 +31,75 @@ ausgleich.5.d:0 "헝가리인들이 빈을 향해 정중히 답한 이후 우리
 ausgleich.5.a:0 "반드시 답해야 한다. 황제 폐하 만세!"
 ausgleich.5.b:0 "반드시 싸워야 한다! 독립을 선언한다."
 
-ausgleich.6.t:0 "A country accepted to centralise"
-ausgleich.6.d:0 "Today a country has has agreed to abolish its autonomous status and directly be part of the Empire. Lang lebe der Kaiser!"
-ausgleich.6.a:0 "Very good."
+ausgleich.6.t:0 "제후국이 중앙 집권을 수락했다"
+ausgleich.6.d:0 "오늘 제후국 하나가 자치권을 내려놓고 제국의 일부로 편입되길 수락했습니다. 황제 폐하 만세!"
+ausgleich.6.a:0 "아주 좋아."
 
-ausgleich.7.t:0 "A country tries to break out of the Empire"
-ausgleich.7.d:0 "Instead of bowing to our righteous demand for them to end their autonomous status a country has declared its independence. What shall we do?"
-ausgleich.7.a:0 "They shall be crushed!"
-ausgleich.7.b:0 "We don't need them anyway."
+ausgleich.7.t:0 "제후국이 제국을 이탈하려 한다"
+ausgleich.7.d:0 "우리의 정당한 요구에 응하는 대신 저들은 자치를 끝내고 독립을 선포했습니다. 어찌할까요?"
+ausgleich.7.a:0 "모조리 쳐부숴라!"
+ausgleich.7.b:0 "필요치 않은 자들이다."
 
 ### Galicia Annexation ###
-ausgleich.8.t:0 "Centralisation of the Empire"
-ausgleich.8.d:0 "After the Hungarians have submitted to Vienna a formal request has been sent to our government requesting that we also centralise into the empire. We now have the option to submit or fight. What will we do?"
-ausgleich.8.a:0 "We shall submit. Lang lebe der Kaiser!"
-ausgleich.8.b:0 "We shall fight! Declare independence."
+ausgleich.8.t:0 "제국의 중앙 집권화"
+ausgleich.8.d:0 "헝가리인들이 빈을 향해 정중히 답한 이후 우리 정부도 제국의 중앙 집권화에 대답해야 할 때가 왔습니다. 응답과 싸움 두 선택지가 주어졌습니다. 어쩌면 좋겠습니까?"
+ausgleich.8.a:0 "반드시 답해야 한다. 황제 폐하 만세!"
+ausgleich.8.b:0 "반드시 싸워야 한다! 독립을 선언한다."
 
-ausgleich.9.t:0 "A country accepted to centralise"
-ausgleich.9.d:0 "Today a country has has agreed to abolish its autonomous status and directly be part of the Empire. Lang lebe der Kaiser!"
-ausgleich.9.a:0 "Very good."
+ausgleich.9.t:0 "제후국이 중앙 집권을 수락했다"
+ausgleich.9.d:0 "오늘 제후국 하나가 자치권을 내려놓고 제국의 일부로 편입되길 수락했습니다. 황제 폐하 만세!"
+ausgleich.9.a:0 "아주 좋아."
 
-ausgleich.10.t:0 "A country tries to break out of the Empire"
-ausgleich.10.d:0 "Instead of bowing to our righteous demand for them to end their autonomous status a country has declared its independence. What shall we do?"
-ausgleich.10.a:0 "They shall be crushed!"
-ausgleich.10.b:0 "We don't need them anyway."
+ausgleich.10.t:0 "제후국이 제국을 이탈하려 한다"
+ausgleich.10.d:0 "우리의 정당한 요구에 응하는 대신 저들은 자치를 끝내고 독립을 선포했습니다. 어찌할까요?"
+ausgleich.10.a:0 "모조리 쳐부숴라!"
+ausgleich.10.b:0 "필요치 않은 자들이다."
 
 ### Croatia Annexation ###
-ausgleich.11.t:0 "Centralisation of the Empire"
-ausgleich.11.d:0 "After the Hungarians have submitted to Vienna a formal request has been sent to our government requesting that we also centralise into the empire. We now have the option to submit or fight. What will we do?"
-ausgleich.11.a:0 "We shall submit. Lang lebe der Kaiser!"
-ausgleich.11.b:0 "We shall fight! Declare independence."
+ausgleich.11.t:0 "제국의 중앙 집권화"
+ausgleich.11.d:0 "헝가리인들이 빈을 향해 정중히 답한 이후 우리 정부도 제국의 중앙 집권화에 대답해야 할 때가 왔습니다. 응답과 싸움 두 선택지가 주어졌습니다. 어쩌면 좋겠습니까?"
+ausgleich.11.a:0 "반드시 답해야 한다. 황제 폐하 만세!"
+ausgleich.11.b:0 "반드시 싸워야 한다! 독립을 선언한다."
 
-ausgleich.12.t:0 "A country accepted to centralise"
-ausgleich.12.d:0 "Today a country has has agreed to abolish its autonomous status and directly be part of the Empire. Lang lebe der Kaiser!"
-ausgleich.12.a:0 "Very good."
+ausgleich.12.t:0 "제후국이 중앙 집권을 수락했다"
+ausgleich.12.d:0 "오늘 제후국 하나가 자치권을 내려놓고 제국의 일부로 편입되길 수락했습니다. 황제 폐하 만세!"
+ausgleich.12.a:0 "아주 좋아."
 
-ausgleich.13.t:0 "A country tries to break out of the Empire"
-ausgleich.13.d:0 "Instead of bowing to our righteous demand for them to end their autonomous status a country has declared its independence. What shall we do?"
-ausgleich.13.a:0 "They shall be crushed!"
-ausgleich.13.b:0 "We don't need them anyway."
+ausgleich.13.t:0 "제후국이 제국을 이탈하려 한다"
+ausgleich.13.d:0 "우리의 정당한 요구에 응하는 대신 저들은 자치를 끝내고 독립을 선포했습니다. 어찌할까요?"
+ausgleich.13.a:0 "모조리 쳐부숴라!"
+ausgleich.13.b:0 "필요치 않은 자들이다."
 
 ### Bosnia Annexation ###
-ausgleich.14.t:0 "Centralisation of the Empire"
-ausgleich.14.d:0 "After the Hungarians have submitted to Vienna a formal request has been sent to our government requesting that we also centralise into the empire. We now have the option to submit or fight. What will we do?"
-ausgleich.14.a:0 "We shall submit. Lang lebe der Kaiser!"
-ausgleich.14.b:0 "We shall fight! Declare independence."
+ausgleich.14.t:0 "제국의 중앙 집권화"
+ausgleich.14.d:0 "헝가리인들이 빈을 향해 정중히 답한 이후 우리 정부도 제국의 중앙 집권화에 대답해야 할 때가 왔습니다. 응답과 싸움 두 선택지가 주어졌습니다. 어쩌면 좋겠습니까?"
+ausgleich.14.a:0 "반드시 답해야 한다. 황제 폐하 만세!"
+ausgleich.14.b:0 "반드시 싸워야 한다! 독립을 선언한다."
 
-ausgleich.15.t:0 "A country accepted to centralise"
-ausgleich.15.d:0 "Today a country has has agreed to abolish its autonomous status and directly be part of the Empire. Lang lebe der Kaiser!"
-ausgleich.15.a:0 "Very good."
+ausgleich.15.t:0 "제후국이 중앙 집권을 수락했다"
+ausgleich.15.d:0 "오늘 제후국 하나가 자치권을 내려놓고 제국의 일부로 편입되길 수락했습니다. 황제 폐하 만세!"
+ausgleich.15.a:0 "아주 좋아."
 
-ausgleich.16.t:0 "A country tries to break out of the Empire"
-ausgleich.16.d:0 "Instead of bowing to our righteous demand for them to end their autonomous status a country has declared its independence. What shall we do?"
-ausgleich.16.a:0 "They shall be crushed!"
-ausgleich.16.b:0 "We don't need them anyway."
+ausgleich.16.t:0 "제후국이 제국을 이탈하려 한다"
+ausgleich.16.d:0 "우리의 정당한 요구에 응하는 대신 저들은 자치를 끝내고 독립을 선포했습니다. 어찌할까요?"
+ausgleich.16.a:0 "모조리 쳐부숴라!"
+ausgleich.16.b:0 "필요치 않은 자들이다."
 
 ### Second Round of Negotiation ###
-ausgleich.17.t:0 "The second round of negotiations"
-ausgleich.17.d:0 "The arrogant Magyars have rejected our proposal! Several ministers are suggesting we offer the Hungarians Bosnia to placate them. Many officers are calling for preparations of a punitive war against Hungary for this insult. What shall we do?"
-ausgleich.17.a:0 "Declare war on them."
-ausgleich.17.b:0 "Offer the Status Quo."
-ausgleich.17.c:0 "Offer Bosnia to them."
+ausgleich.17.t:0 "두 번째 협상석"
+ausgleich.17.d:0 "어리석은 마자르 놈들이 우리 제안을 거부했습니다! 몇몇 장관들이 헝가리인들에게 보스니아를 넘겨주자는 타개안을 내놓았습니다. 많은 장교들은 이 모욕을 씻기 위한 전쟁을 준비하게 해달라고 요청하고 있습니다. 어쩌시겠습니까?"
+ausgleich.17.a:0 "전쟁을 선포한다."
+ausgleich.17.b:0 "현상 유지를 제안한다."
+ausgleich.17.c:0 "보스니아 이양을 제안한다."
 
-ausgleich.18.t:0 "The second round of negotiations"
-ausgleich.18.d:0 "To save face from their earlier demand the Austrians are now offering that the Status Quo be maintained. It's clear that they are afraid of the Hungarian nation, many within our government are calling for the end of our involvement in the Empire. More level headed ministers are advising we accept the Austrian offer. What shall we do?"
-ausgleich.18.a:0 "Accept the offer."
-ausgleich.18.b:0 "No! We will not accept this!"
+ausgleich.18.t:0 "두 번째 협상석"
+ausgleich.18.d:0 "고작 체면치레나 했던 지난 제안과는 다르게, 오스트리아인들은 이제 현상 유지를 제안했습니다. 그들은 분명 헝가리인의 국가를 두려워 하고 있습니다. 우리 정부 요인 중 많은 수가 제국의 일에 관여하길 그만두어달라 요청하고 있습니다. 더 높은 고위 장관들은 오스트리아의 제안을 받아들이라 조언했습니다. 어쩌시겠습니까?"
+ausgleich.18.a:0 "제안을 받아들인다."
+ausgleich.18.b:0 "아니! 받아들일 수 없다!"
 
-ausgleich.19.t:0 "Ausgleich ends in a draw"
-ausgleich.19.d:0 "After long negotiations the Hungarian and the Austrian government have agreed to maintain the current status of the Empire. This means that they could not agree on different terms but neither side was confident enough to declare war on the other side."
-ausgleich.19.a:0 "Okay."
+ausgleich.19.t:0 "일장일단의 대타협"
+ausgleich.19.d:0 "헝가리인들과 오스트리아 정부 사이의 긴 협상 끝에 제국 내에서의 현 판도를 유지하기로 합의했습니다. 이것이 뜻하는 바는 저들이 다른 국면을 원하는 것도 아니요, 한편으론 전쟁에서 승리리란 확신이 없기도 하다는 것일 겁니다."
+ausgleich.19.a:0 "좋아."
 
 ### Offer Bosnia ###
 ausgleich.20.t:0 "The second round of negotiations"
