--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -119,61 +119,59 @@ CSA_war_is_a_racket:0 "전쟁은 화력이다."
 CSA_war_is_a_racket_desc:0 "전쟁은 화력이다. 이 말은 항상 있어왔고, 우리는 동의하지 않습니다. 전쟁은 역사속에서 자본가들의 탐욕을 위해 싸웠습니다. 그러나 새로운 혁명 군대는 그러지 않을 겁니다. 혁명 군대는 인민들을 위해 싸울겁니다. 그리고 끝에서는, 우리의 군대는 병사들의 생명을 보호하기 위해 조직될겁니다. 우리를 대신하여 압도적인 화력이 자본주의들을 파괴할겁니다. 탄환은 싸지만, 인민은 그렇지 않으니깐요." 
 CSA_peoples_artilary:0 "대포들을 발사하라"
 CSA_peoples_artilary_desc:0 "군대의 힘은 이제 압도적인 화력에 달려 있습니다. 가능한 많은 탄약을 생산해야 하고, 많은 전차화 대포들을 우리가 할 수 있는 만큼 만들어야 합니다. 그리고 그 대포와 총들이 자본가들과 반동주의자들을 단번에 파괴시킬겁니다."
-CSA_peoples_rangers:0 "인민 해방군의 레인저"
 CSA_peoples_rangers_desc:0 "우리는 군대의 특수 작전 부대를 조직해야 합니다. 이러한 인민 해방군 레인저들은 최고 중에 최고들로 구성 될 것이고, 이 레인저들은 우리 군대가 필요하는 것과 혁명과 전쟁 최 전방에서 벌어질 문제들을 다루는데 도움이 되도록 훈련 받을 것 입니다." 
 CSA_civil_war_lessons:0 "혁명에서부터 학습"
 CSA_civil_war_lessons_desc:0 "우리는 노동 계급을 위한 혁명에서 승리했습니다. 그러나 새로운 전쟁이 지평선 위에 있습니다. 우리는 반동적인 자본가들을 분쇄했지만, 이직 적들은 전 세계에 분포하고 있습니다. 따라서 우리들의 무기를 현대화 하고 미래에 벌어질 갈등에 대해 대비하는 것이 좋을 것 입니다." 
 
 ### Military Focuses - Navy ###
-
 CSA_peoples_navy:0 "인민해방군 해군"
-CSA_peoples_navy_desc:0 "The battle for freedom of the American Workers will not just be fought on land, it will also be fought on the Seas. Just as in the days of John Paul Jones who fought in the first revolution, we shall need a new navy of the people to sink the reactionaries to the bottom of the deep blue sea."
+CSA_peoples_navy_desc:0 "미국 노동자의 자유를 위한 전쟁은 지상에서만 일어나는게 아닙니다. 바다에서도 일어나죠. 첫번째 혁명에서 싸운 존 폴 존스처럼, 우리도 깊은 푸른 바다 속으로 반동분자를 침몰시키기 위해 인민을 위한 새로운 해군이 필요합니다."
 CSA_rickover_plan:0 "리코버의 전함 계획"
-CSA_rickover_plan_desc:0 "There is a conflict within the Navy over the best form of the navy should take. The conflict is over are Aircraft Carriers or Battleships better for the backbone of the Navy. Admiral Rickover pushes for a large navy dominated by Battleships and protected by cruisers. We should support his plan and obliterate the reactionaries on the high seas!"
+CSA_rickover_plan_desc:0 "해군을 어떻게 구성하는지를 두고 해군 내 갈등이 있습니다. 그 갈등은 해군의 중추가 항공모함 될 것인가 전함 될 것인가의 문제입니다. 리코버 제독은 순양함에 엄호를 받는 전함을 기반으로 한 대규모 해군을 지지합니다. 우리는 그의 계획을 지지하고 해상에서 반동분자를 제거해야 합니다."
 CSA_battle_cruisers:0 "순양 전함"
-CSA_battle_cruisers_desc:0 "As part of Admiral Rickover's plan for the People's Liberation Navy, we are going to need a number of powerful Battle Cruisers as escorts for the battleships. As such we should get to work right away building the Cruisers that we need."
+CSA_battle_cruisers_desc:0 "리코버 제독의 인민해방군 해군에 대한 계획의 부분으로, 전함을 위한 호위대로 다수의 강력한 순양전함을 필요 하다고 주장했습니다. 그렇기 때문에 우리는 우리가 요구하는 순양전함들을 만들어야만 합니다."
 CSA_anderson_plan:0 "앤더스의 계획"
-CSA_anderson_plan_desc:0 "There is a conflict within the Navy over the best form of the navy should take. The conflict is over are Aircraft Carriers or Battleships better for the backbone of the Navy. Admiral Anderson's plan is for the navy to be dominated by Aircraft Carriers. We shall dominate both the air and sky together on our path of liberating workers from their chains!"
+CSA_anderson_plan_desc:0 "해군을 어떻게 구성하는지를 두고 해군 내 갈등이 있습니다. 그 갈등은 해군의 중추가 항공모함 될 것인가 전함 될 것인가의 문제입니다. 앤더스 재독의 계획은 항곰모함에 기반한 해군입니다. 우리는 노동자들의 사슬로부터 그들을 자유롭게 하기 위하여 하늘을 지배해야 합니다."
 CSA_destroyers:0 "호위 효율"
-CSA_destroyers_desc:0 "Regardless of which plan is chosen, we will need smaller escorts for our transports and convoys. We shall not let the capitalists sink them. Thus we shall build escorts to protect the American workers as they travel the oceans blue."
+CSA_destroyers_desc:0 "어떤 계획이 선택 되든 간에, 우리는 수송선을 위해서 작은 호위대가 필요합니다. 우리는 자본가들이 수송선들을 격침시키도록 못하도록 할 것이며 따라서 우리는 호위 함대를 만들어 바다를 여행하는 노동자들을 보호해야만 합니다."
 CSA_anti_submarines:0 "대 잠수함 전략"
-CSA_anti_submarines_desc:0 "Submarines were used during the first Weltkrieg with great effect by the Germans. There is no doubt that they will be used by the capitalists and reactionaries to sink our ships. To avoid this we must train our escorts to destroy the submarines."
+CSA_anti_submarines_desc:0 "잠수함은 대 전쟁 동안 독일에 의해서 아주 효과적으로 사용되었습니다. 따라서 그 것들이 자본가와 반동주의자에 의해 우리의 함선을 격침시키기 위하여 사용 될 것이라는건 명백한 사실입니다. 그 것을 피하기 위해서는 우리의 호위대가 잠수함을 파괴하도록 훈련 시켜야 합니다."
 CSA_submarines:0 "인민 해방군 잠수함"
-CSA_submarines_desc:0 "We have seen the effectiveness of Submarines during the Weltkrieg when the Germans used them. We shall use them to sink the Capitalists and Reactionaries ships without them knowing what happened to them."
+CSA_submarines_desc:0 "우리는 대전쟁에서 독일군이 사용한 잠수함의 위력을 보았습니다. 따라서 우리들도 자본가들과 반동주의자들이 자신들에게 뭔 일이 일어난지 알기도 전에 그들의 함선을 격침시킬겁니다."
 CSA_carrier_planes:0 "항공모함 함재기"
-CSA_carrier_planes_desc:0 "As part of Admiral Anderson's plan we will need the best Carrier planes that we can produce. An Aircraft Carrier is only as good as the planes that it carries with them. We should thus make sure that all our carriers have the best planes available."
+CSA_carrier_planes_desc:0 "앤더스 제독의 인민해방군 해군에 대한 계획의 부분으로, 그는 우리가 생산할 수 있는 최고의 함재기를 요구했습니다. 항공모함은 오직 함재기를 운반하는 항공기나 다름 없으며, 우리는 반드시 모든 우리의 항공모함이 우수한 함재기를 가지도록 해야합니다.
 CSA_new_captians:0 "오대호 해군 기지"
-CSA_new_captians_desc:0 "While we got a number of brave revolutionary captains, to switch sides with us when the Revolution began, we will need more. Thus we should begin training new Admirals to carry out the revolutionary spirit on the high seas. A training centre outside of Chicago that uses Lake Michigan as a practice area. More over, if we ever fight with the Canadians, it would be best to have admirals and captains who are trained to sail on the Great Lakes."
+CSA_new_captians_desc:0 "우리는 몇몇 혁명적인 선장들을 얻었지만, 혁명이 시잘될때 우리 편으로 전향시킬려면 더 많은 것들이 필요합니다. 그래서 우리는 바다에서 혁명을 수행하기 위하여 새로운 해군 장교들을 훈련시키는 것을 시작했습니다. 훈련은 시카고 밖에 있는 미시건 호수에서 이루어질겁니다." 게다가 만약 우리가 캐나다인들과 싸우게 된다면, 오대호에서 훈련 받은 제독과 함장들에게는 매우 유리할겁니다.
 CSA_peoples_marines:0 "인민 해방군 해병대"
-CSA_peoples_marines_desc:0 "The Marine Corps was one of the most elite branches of the armed forces of the old Capitalistic Armed Forces. Now that the People have taken over, we should remake the Marine Corps into the People's Marines."
+CSA_peoples_marines_desc:0 "미해병대는 구 자본주의적 무장 세력 중에서 가장 정예 부대였죠. 그리고 우리들은 그들을 인민들의 해병대로써 다시 만들어야합니다."
 CSA_new_carriers:0 "새로운 항공모함"
-CSA_new_carriers_desc:0 "With the Revolution over, it is time that we expand and modernise Our Carriers to fight the reactionary enemies of the people across the world where ever they may be. We will need the best Aircraft Carriers to bring the Capitalists to their knees."
+CSA_new_carriers_desc:0 "혁명은 끝났고, 우리들은 세계에 있는 반동적인 적들과 싸우기 위하여 인민 해방군의 항공모함을 현대화 하고 확장 시켜야 합니다. 우리는 외국 자본가들을 항복시키기 위해서 우수한 항공 모함이 필요 합니다."
 CSA_new_battleships:0 "새로운 전함"
-CSA_new_battleships_desc:0 "With the Revolution over, it is time that we expand and modernise our Battleships to fight the reactionaries of the people across the world wherever they may be. We will need the best Battleships to bring the foreign capitalists to their knees."
+CSA_new_battleships_desc:0 "혁명은 끝났고, 우리들은 세계에 있는 반동적인 적들과 싸우기 위하여 인민 해방군의 전함을 현대화 하고 확장 시켜야 합니다. 우리는 외국 자본가들을 항복시키기 위해서 우수한 전함이 필요 합니다 "
 
 ### Military Focuses - Air ###
 CSA_red_airforce:0 "인민해방군 공군"
-CSA_red_airforce_desc:0 "The Revolution and future battles for the Freedom for the Workers of America and the World will not just be fought on land; it will also be fought in the skies. We shall create our own Air Force. We shall blast the reactionaries and capitalists out of the skies and fly the banner of freedom across America."
-CSA_air_support:0 "공중 지원"
-CSA_air_support_desc:0 "With the creation of the People's Liberation Air Force, the question of focus for the Air Force has been brought up. Some think that we should focus on the Air Supremacy and dominate the skies. Others think that the Air Force's principal goal is to support the army. We should favour the policy of air support for the new Air Force."
-CSA_cas:0 "근접 공중 지원"
-CSA_cas_desc:0 "The centre of the policy of Air Support will be Close Air Support planes. Thus in order to put this plan into proper implementation we must make sure that our Close Air Support Planes are the best and most modernised to break the chains capitalism."
+CSA_red_airforce_desc:0 ""미국 노동자의 자유를 위한 전쟁은 지상에서만 일어나는게 아닙니다. 하늘에서도 일어나죠. 우리들은 인민들을 위한 공군을 창설 할겁니다. 우리는 하늘에서 자본가와 반동주의자들을 강타 할 것이고 미국 전역에 자유의 깃발을 하늘에서 보여 줄겁니다.."
+CSA_air_support:0 "항공 지원"
+CSA_air_support_desc:0 "인민해방군 공군이 창설됨에 따라서, 공군력을 어떻게 사용해야 하는지에 대한 의문이 제기되었습니다. 일부는 하늘을 지배하는데 초점을 두어야 한다고 생각했고, 다른 일부는 육군을 지원하는데 목표를 둬야 한다고 생각했습니다. 우리는 새로운 공군을 위해 항공 지원 정책을 지지할겁니다."
+CSA_cas:0 "근접 항공 지원"
+CSA_cas_desc:0 "항공 지원 정책의 핵심은 근접 항공 지원입니다. 따라서 이 계획이 적절하게 이행되기 위해서는 우리는 반드시 근접 항공 지원기를 우수하고 가장 현대적으로 만들어야 합니다. 자본가들의 족쇄를 파괴하기 위해서요."
 CSA_tactical_bombers:0 "전술 폭격기"
-CSA_tactical_bombers_desc:0 "To continue the policy of Air Supremacy we shall focus on Tactical Bombers. They will provide the ground support that we need in our revolution. Our tactical bombers shall destroy the reactionary forces that stand in the way of worker's liberation."
-CSA_air_supremecy:0 "공중 지배"
-CSA_air_supremecy_desc:0 "With the creation of the People's Liberation Air Force, the question of focus for the Air Force has been brought up. Some think that we should focus on the Air Supremacy and dominate the skies. Others think that the Air Force's principal goal is to support the army. We should favour the policy of air supremacy for the new Air Force."
+CSA_tactical_bombers_desc:0 "우리의 공중 지배 정책을 유지하기 위해서는 우리는 전술 폭격기에 초첨을 맞춰야 합니다. 그것들은 우리의 혁명에 필요한 지상 지원을 제공할겁니다. 우리의 폭격기들은 노동자 해방을 방해하는 반동분자 세력들을 파괴 할겁니다."
+CSA_air_supremecy:0 "항공 지배"
+CSA_air_supremecy_desc:0 "인민해방군 공군이 창설됨에 따라서, 공군력을 어떻게 사용해야 하는지에 대한 의문이 제기되었습니다. 일부는 하늘을 지배하는데 초점을 두어야 한다고 생각했고, 다른 일부는 육군을 지원하는데 목표를 둬야 한다고 생각했습니다. 우리는 새로운 공군을 위해 항공 지배 정책을 지지할겁니다."
 CSA_female_aviators:0 "여성 조종사"
-CSA_female_aviators_desc:0 "We have many women pilots who wish to fight capitalism in the skies; lets support them."
+CSA_female_aviators_desc:0 "우리는 하늘에서 자본주의와 싸우기 원하는 많은 여성 파일럿을 가지고 있습니다. 우리는 그들을 지원해야 합니다."
 CSA_fighters:0 "적색 전투기"
-CSA_fighters_desc:0 "The centre of the policy of Air Supremacy will be our fighter planes. Thus in order to put the plan into motion, we must begin production and research of our fighter planes so that we are able to truly dominate the skies."
+CSA_fighters_desc:0 "항공 지원 정책의 핵심은 우리들의 전투기입니다. 따라서 이 계획이 적절하게 이행되기 위해서는 우리는 반드시 우리의 전투기를 개발하고 생산해야 합니다. 우리가 확실하게 하늘을 장악할 수 있기 위해서요."
 CSA_expand_airports:0 "항공기지 확장"
-CSA_expand_airports_desc:0 "The People's Liberation Air Force requires more airports for the Revolution to continue. We should thus build some more airports and expand the ones that we currently have."
+CSA_expand_airports_desc:0 "인민 해방군 공군은 혁명을 지속하기 위하여 더 많은 공항를 필요 합니다. 그래서 우리는 더 많은 공항들을 건설하고, 기존의 공항들을 확장해야 합니다."
 CSA_strategic_bombers:0 "전략 폭격기"
-CSA_strategic_bombers_desc:0 "To dominate the skies we need Strategic Bombers. This will destroy the power of the reactionary and capitalist forces that oppose the Revolution."
+CSA_strategic_bombers_desc:0 "하늘을 지배하기 위해 우리는 전략 폭격기가 필요합니다. 이 것은 혁명에 반대하는 반동주의자와 자본가들의 군세를 파괴할겁니다."
 CSA_warning_systems:0 "경고 시스템"
-CSA_warning_systems_desc:0 "We have to deal with numerous different aircraft from reactionaries forces. In order to protect the people from the reactionary forces we should focus on Warning systems that we can better understand the lay of the skies. This will protect our cities and the people from the reactionary air forces."
+CSA_warning_systems_desc:0 "우리는 반동분자 세력들의 수많은 항공기들을 막아야 합니다. 인민들을 반동 세력으로부터 막기 위해서는, 우리는 적 공군의 배치 상태를 쉽게 알도록 하는 경고 시스템을 만드는데 집중해야 합니다. 이 것들은 우리들의 도시와 인민들을 적의 공군으로부터 보호할 것입니다."
 CSA_rocketry:0 "미국의 로켓"
-CSA_rocketry_desc:0 "The airforce proposes that we look into Rocketry and how that technology can be used to fight the reactionary forces of Capitalism."
+CSA_rocketry_desc:0 "공군은 로켓 기술을 보았고 어떻게 이 기술을 자본가들의 공군과 싸우는데 사용할 수 있는지 알려주었습니다."
 
 ### Economic Focuses ###
 CSA_war_syndicalism:0 "War Syndicalism"
