--- a/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
@@ -1,190 +1,190 @@
 ﻿l_english:
 
-STRATEGICREGION_1:0 "Southern England"
-STRATEGICREGION_2:0 "Northern England"
-STRATEGICREGION_3:1 "Scotland"
-STRATEGICREGION_4:0 "Ireland"
-STRATEGICREGION_5:0 "Benelux Region"
-STRATEGICREGION_6:0 "North-West Germany"
-STRATEGICREGION_7:1 "Southern Germany"
-STRATEGICREGION_8:0 "Eastern Germany"
-STRATEGICREGION_9:0 "Baltic Sea"
-STRATEGICREGION_10:0 "Southern Sweden"
-STRATEGICREGION_11:0 "Southern Norway"
-STRATEGICREGION_12:0 "Northern Scandinavia"
-STRATEGICREGION_13:0 "Finland"
-STRATEGICREGION_14:0 "Trans-Urals"
-STRATEGICREGION_16:0 "North Sea"
-STRATEGICREGION_17:0 "Horn of Africa"
-STRATEGICREGION_18:0 "English Channel"
-STRATEGICREGION_19:0 "Northern France"
-STRATEGICREGION_20:0 "Southern France"
-STRATEGICREGION_21:0 "Alpine Region"
-STRATEGICREGION_22:1 "Bohemia"
-STRATEGICREGION_23:0 "Italy"
-STRATEGICREGION_24:0 "Western Balkans"
-STRATEGICREGION_25:0 "Greece"
-STRATEGICREGION_26:0 "Eastern Balkans"
-STRATEGICREGION_27:1 "Hungary"
-STRATEGICREGION_28:0 "Middle East"
-STRATEGICREGION_29:0 "Central Mediterranean Sea"
-STRATEGICREGION_30:0 "Black Sea"
-STRATEGICREGION_31:0 "Southern India"
-STRATEGICREGION_32:0 "South-Eastern Pacific"
-STRATEGICREGION_33:0 "Alaska"
-STRATEGICREGION_34:0 "Central America"
-STRATEGICREGION_35:0 "South America"
-STRATEGICREGION_36:0 "Greenland"
-STRATEGICREGION_37:0 "Baltic States"
-STRATEGICREGION_38:1 "Poland"
-STRATEGICREGION_39:1 "Belarus"
-STRATEGICREGION_40:1 "Transvolga"
-STRATEGICREGION_41:1 "Iberian Region"
-STRATEGICREGION_42:0 "Bay of Biscay"
-STRATEGICREGION_43:0 "Western Approaches"
-STRATEGICREGION_44:0 "Denmark Strait"
-STRATEGICREGION_45:0 "Norwegian Sea"
-STRATEGICREGION_46:0 "Barents Sea"
-STRATEGICREGION_47:1 "Iberian Coast"
-STRATEGICREGION_48:0 "African Coast"
-STRATEGICREGION_49:0 "North Atlantic Ridge"
-STRATEGICREGION_50:0 "Labrador Sea"
-STRATEGICREGION_51:0 "Mid Atlantic gap"
-STRATEGICREGION_52:0 "Gulf of Mexico"
-STRATEGICREGION_53:0 "Caribbean Sea"
-STRATEGICREGION_54:0 "Eastern Seaboard"
-STRATEGICREGION_55:0 "Newfoundland Sea"
-STRATEGICREGION_56:0 "Mid Atlantic"
-STRATEGICREGION_57:0 "Sargasso Sea"
-STRATEGICREGION_58:0 "Central Atlantic Gap"
-STRATEGICREGION_59:0 "Demerara Plain"
-STRATEGICREGION_60:0 "West Indian Ocean"
-STRATEGICREGION_61:0 "Cap Verde Plain"
-STRATEGICREGION_62:0 "Gulf Of Guinea"
-STRATEGICREGION_63:0 "Argentine Coast"
-STRATEGICREGION_64:0 "South Georgia Sea"
-STRATEGICREGION_65:0 "Cape of Africa"
-STRATEGICREGION_66:0 "South Central Atlantic"
-STRATEGICREGION_67:0 "Atlantic-Indian Ridge"
-STRATEGICREGION_68:0 "Western Mediterranean Sea"
-STRATEGICREGION_69:0 "Eastern Mediterranean Sea"
-STRATEGICREGION_70:0 "Caspian Sea"
-STRATEGICREGION_71:0 "East Indian Ocean"
-STRATEGICREGION_72:0 "Straits of Malacca"
-STRATEGICREGION_73:0 "Gulf of Siam" #Gulf of Thailand
-STRATEGICREGION_74:0 "South East Indian Ocean"
-STRATEGICREGION_75:0 "South China Sea"
-STRATEGICREGION_76:0 "East China Sea"
-STRATEGICREGION_77:0 "Yellow Sea"
-STRATEGICREGION_78:0 "Philippine Sea"
-STRATEGICREGION_79:0 "Sea of Japan"
-STRATEGICREGION_80:0 "Celebes Sea"
-STRATEGICREGION_81:0 "Coral Sea"
-STRATEGICREGION_82:0 "Gulf of Carpentaria"
-STRATEGICREGION_83:0 "Solomon Sea"
-STRATEGICREGION_84:0 "Bismarck Sea"
-STRATEGICREGION_85:0 "South West Indian Ocean"
-STRATEGICREGION_86:0 "Tasman Sea"
-STRATEGICREGION_87:0 "Sea of Okhotsk"
-STRATEGICREGION_88:0 "Bering Sea"
-STRATEGICREGION_89:0 "Western Seaboard"
-STRATEGICREGION_90:0 "Coast of Japan"
-STRATEGICREGION_91:0 "Arafura Sea"
-STRATEGICREGION_92:0 "Timor Sea"
-STRATEGICREGION_93:0 "Java Sea"
-STRATEGICREGION_94:0 "Mariana Region"
-STRATEGICREGION_95:0 "West Emperor Chain"
-STRATEGICREGION_96:0 "North Emperor Chain"
-STRATEGICREGION_97:0 "Eastern Micronesia"
-STRATEGICREGION_98:0 "Great Australian Bight"
-STRATEGICREGION_99:0 "Far Eastern Indian Ocean"
-STRATEGICREGION_100:0 "Red Sea"
-STRATEGICREGION_101:0 "Bay of Bengal"
-STRATEGICREGION_102:0 "East African Coast"
-STRATEGICREGION_103:0 "Mozambique Channel"
-STRATEGICREGION_104:0 "Arabian Sea"
-STRATEGICREGION_105:1 "Hawaii Ridge"
-STRATEGICREGION_106:0 "Mexican Coast"
-STRATEGICREGION_107:0 "Western Canal zone"
-STRATEGICREGION_108:0 "South American coast"
-STRATEGICREGION_109:0 "Peruvian Coast"
-STRATEGICREGION_110:0 "East Pacific Rise"
-STRATEGICREGION_111:0 "North Central Pacific"
-STRATEGICREGION_112:0 "Far South Pacific"
-STRATEGICREGION_113:0 "South Central Pacific"
-STRATEGICREGION_114:0 "North Pacific"
-STRATEGICREGION_115:0 "North East Pacific"
-STRATEGICREGION_116:0 "Iran"
-STRATEGICREGION_117:1 "South-East"
-STRATEGICREGION_118:0 "West Coast"
-STRATEGICREGION_119:1 "South-West"
-STRATEGICREGION_120:2 "Mid-West"
-STRATEGICREGION_121:0 "Eastern Canada"
-STRATEGICREGION_122:0 "Western Canada"
-STRATEGICREGION_123:0 "Mexico"
-STRATEGICREGION_124:0 "Northern South America"
-STRATEGICREGION_125:0 "Brazil"
-STRATEGICREGION_126:0 "North Africa"
-STRATEGICREGION_127:0 "Sahara Desert"
-STRATEGICREGION_128:0 "Egypt"
-STRATEGICREGION_129:0 "Asia minor"
-STRATEGICREGION_130:0 "Ukraine"
-STRATEGICREGION_131:0 "Belarus"
-STRATEGICREGION_132:0 "Northern Front"
-STRATEGICREGION_133:0 "Central Russia"
-STRATEGICREGION_134:0 "Caucasus Region"
-STRATEGICREGION_135:0 "Kuban Region"
-STRATEGICREGION_136:0 "Central Asia"
-STRATEGICREGION_137:0 "Western Steppe"
-STRATEGICREGION_138:0 "Ural Region"
-STRATEGICREGION_139:0 "South Africa"
-STRATEGICREGION_140:1 "Central Africa"
-STRATEGICREGION_141:0 "Eastern India"
-STRATEGICREGION_142:0 "South East Asia"
-STRATEGICREGION_143:0 "Northern China"
-STRATEGICREGION_144:0 "Western China"
-STRATEGICREGION_145:0 "Northwest China"
-STRATEGICREGION_146:0 "Himalayas"
-STRATEGICREGION_147:0 "Northern Siberia"
-STRATEGICREGION_148:1 "Amur Region"
-STRATEGICREGION_149:0 "Eastern Siberia"
-STRATEGICREGION_150:0 "Arctic Russia"
-STRATEGICREGION_151:0 "Western Siberia"
-STRATEGICREGION_152:0 "Mongolia"
-STRATEGICREGION_153:0 "Northern India"
-STRATEGICREGION_154:0 "Home Islands"
-STRATEGICREGION_155:0 "Manchuria"
-STRATEGICREGION_156:0 "Australia"
-STRATEGICREGION_157:0 "New Zealand"
-STRATEGICREGION_158:0 "Sunda Islands"
-STRATEGICREGION_159:0 "Borneo"
-STRATEGICREGION_160:0 "Philippines"
-STRATEGICREGION_161:0 "Iceland"
-STRATEGICREGION_162:0 "Afghanistan"
-STRATEGICREGION_163:0 "Amazonas"
-STRATEGICREGION_164:0 "Eastern China"
-STRATEGICREGION_165:0 "Southern China"
-STRATEGICREGION_166:0 "Hudson Bay"
-STRATEGICREGION_167:0 "New Guinea"
-STRATEGICREGION_168:0 "Adriatic Sea"
-STRATEGICREGION_169:0 "Tyrrhenian Sea"
-STRATEGICREGION_170:0 "Florida Coast"
-STRATEGICREGION_171:0 "Northwest Coast"
-STRATEGICREGION_172:0 "Pacific Line Ridge"
-STRATEGICREGION_173:0 "Eastern North Sea"
-STRATEGICREGION_174:0 "Norwegian Coast"
-STRATEGICREGION_175:0 "Central Pacific"
-STRATEGICREGION_176:0 "Central North Pacific"
-STRATEGICREGION_177:0 "Western North Pacific"
-STRATEGICREGION_178:0 "West Polynesia"
-STRATEGICREGION_179:0 "French Polynesia"
-STRATEGICREGION_180:0 "Micronesian Gap"
-STRATEGICREGION_17_1:1 "Horn of Africa"
-STRATEGICREGION_131_1:0 "Western Russia"
-STRATEGICREGION_181:0 "Po Region"
-STRATEGICREGION_182:0 "Western Africa"
-STRATEGICREGION_183:0 "Central Canada"
-STRATEGICREGION_184:0 "Arctic Canada"
-STRATEGICREGION_185:0 "Northwest"
-STRATEGICREGION_186:1 "North-East"
-STRATEGICREGION_187:0 "Arabia"
+ STRATEGICREGION_1:0 "남부 잉글랜드"
+ STRATEGICREGION_2:0 "북부 잉글랜드"
+ STRATEGICREGION_3:1 "스코틀랜드"
+ STRATEGICREGION_4:0 "아일랜드"
+ STRATEGICREGION_5:0 "베네룩스 지역"
+ STRATEGICREGION_6:0 "북-서독일"
+ STRATEGICREGION_7:0 "서부 독일"
+ STRATEGICREGION_8:0 "동부 독일"
+ STRATEGICREGION_9:0 "발트 해"
+ STRATEGICREGION_10:0 "남부 스웨덴"
+ STRATEGICREGION_11:0 "남부 노르웨이"
+ STRATEGICREGION_12:0 "북부 스칸디나비아"
+ STRATEGICREGION_13:0 "핀란드"
+ STRATEGICREGION_14:0 "트랜스-우랄"
+ STRATEGICREGION_16:0 "북해"
+ STRATEGICREGION_17:0 "동아프리카"
+ STRATEGICREGION_18:0 "영국 해협"
+ STRATEGICREGION_19:0 "북부 프랑스"
+ STRATEGICREGION_20:0 "남부 프랑스"
+ STRATEGICREGION_21:0 "알프스 지방"
+ STRATEGICREGION_22:0 "체코슬로바키아"
+ STRATEGICREGION_23:0 "이탈리아"
+ STRATEGICREGION_24:0 "서부 발칸 반도"
+ STRATEGICREGION_25:0 "그리스"
+ STRATEGICREGION_26:0 "동부 발칸 반도"
+ STRATEGICREGION_27:0 "북부 발칸 반도"
+ STRATEGICREGION_28:0 "중동"
+ STRATEGICREGION_29:0 "중부 지중해"
+ STRATEGICREGION_30:0 "흑해"
+ STRATEGICREGION_31:0 "남부 인도"
+ STRATEGICREGION_32:0 "남동부 태평양"
+ STRATEGICREGION_33:0 "알래스카"
+ STRATEGICREGION_34:0 "중앙 아메리카"
+ STRATEGICREGION_35:0 "남아메리카"
+ STRATEGICREGION_36:0 "그린란드"
+ STRATEGICREGION_37:0 "발트 3국"
+ STRATEGICREGION_38:0 "서부 폴란드"
+ STRATEGICREGION_39:0 "동부 폴란드"
+ STRATEGICREGION_40:1 "트란스볼가"
+ STRATEGICREGION_41:1 "이베리아 반도"
+ STRATEGICREGION_42:0 "비스케이 만"
+ STRATEGICREGION_43:0 "웨스턴 어프로치"
+ STRATEGICREGION_44:0 "덴마크 해협"
+ STRATEGICREGION_45:0 "노르웨이 해"
+ STRATEGICREGION_46:0 "바렌츠 해"
+ STRATEGICREGION_47:1 "이베리아 연안"
+ STRATEGICREGION_48:0 "아프리카 연안"
+ STRATEGICREGION_49:0 "북대서양 해령"
+ STRATEGICREGION_50:0 "래브라도 해"
+ STRATEGICREGION_51:0 "대서양 중부 간극"
+ STRATEGICREGION_52:0 "멕시코만"
+ STRATEGICREGION_53:0 "카리브해"
+ STRATEGICREGION_54:0 "동부 연안"
+ STRATEGICREGION_55:0 "뉴펀들랜드 해"
+ STRATEGICREGION_56:0 "중앙 대서양"
+ STRATEGICREGION_57:0 "사르가소 해"
+ STRATEGICREGION_58:0 "중앙 대서양 간극"
+ STRATEGICREGION_59:0 "데메라라 해저평원"
+ STRATEGICREGION_60:0 "서인도양"
+ STRATEGICREGION_61:0 "카보 베르데 해저평원"
+ STRATEGICREGION_62:0 "기니 만"
+ STRATEGICREGION_63:0 "아르헨티나 연안"
+ STRATEGICREGION_64:0 "남 조지아 해"
+ STRATEGICREGION_65:0 "아프리카 곶"
+ STRATEGICREGION_66:0 "남부 중앙 대서양"
+ STRATEGICREGION_67:0 "대서양-인도양 해령"
+ STRATEGICREGION_68:0 "서부 지중해"
+ STRATEGICREGION_69:0 "동부 지중해"
+ STRATEGICREGION_70:0 "카스피 해"
+ STRATEGICREGION_71:0 "동인도양"
+ STRATEGICREGION_72:0 "말라카 해협"
+ STRATEGICREGION_73:0 "타이 만"
+ STRATEGICREGION_74:0 "동남인도양"
+ STRATEGICREGION_75:0 "남중국해"
+ STRATEGICREGION_76:0 "동중국해"
+ STRATEGICREGION_77:0 "황해"
+ STRATEGICREGION_78:0 "필리핀 해"
+ STRATEGICREGION_79:0 "동해"
+ STRATEGICREGION_80:0 "셀레베스 해"
+ STRATEGICREGION_81:0 "산호 해"
+ STRATEGICREGION_82:0 "카펀테리아 만"
+ STRATEGICREGION_83:0 "솔로몬 해"
+ STRATEGICREGION_84:0 "비스마르크 해"
+ STRATEGICREGION_85:0 "서남인도양"
+ STRATEGICREGION_86:0 "태즈먼 해"
+ STRATEGICREGION_87:0 "오호츠크 해"
+ STRATEGICREGION_88:0 "베링 해"
+ STRATEGICREGION_89:0 "서부 연안"
+ STRATEGICREGION_90:0 "일본 연안"
+ STRATEGICREGION_91:0 "아라푸라 해"
+ STRATEGICREGION_92:0 "티모르 해"
+ STRATEGICREGION_93:0 "자와 해"
+ STRATEGICREGION_94:0 "마리아나 지역"
+ STRATEGICREGION_95:0 "서엠퍼러 해저 산열"
+ STRATEGICREGION_96:0 "북엠퍼러 해저 산열"
+ STRATEGICREGION_97:0 "동부 미크로네시아"
+ STRATEGICREGION_98:0 "그레이트 호주만"
+ STRATEGICREGION_99:0 "극동 인도양"
+ STRATEGICREGION_100:0 "홍해"
+ STRATEGICREGION_101:0 "벵골만"
+ STRATEGICREGION_102:0 "동 아프리카 연안"
+ STRATEGICREGION_103:0 "모잠비크 해협"
+ STRATEGICREGION_104:0 "아라비아 해"
+ STRATEGICREGION_105:1 "하와이 해령"
+ STRATEGICREGION_106:0 "멕시코 연안"
+ STRATEGICREGION_107:0 "서부 운하 지대"
+ STRATEGICREGION_108:0 "남아메리카 연안"
+ STRATEGICREGION_109:0 "페루 연안"
+ STRATEGICREGION_110:0 "동 태평양 해팽"
+ STRATEGICREGION_111:0 "북부 중앙 태평양"
+ STRATEGICREGION_112:0 "극남태평양"
+ STRATEGICREGION_113:0 "남부 중앙 태평양 "
+ STRATEGICREGION_114:0 "북태평양"
+ STRATEGICREGION_115:0 "북동태평양"
+ STRATEGICREGION_116:0 "이란"
+ STRATEGICREGION_117:0 "동해안"
+ STRATEGICREGION_118:0 "서해안"
+ STRATEGICREGION_119:0 "남서부"
+ STRATEGICREGION_120:0 "중부 미국"
+ STRATEGICREGION_121:0 "동부 캐나다"
+ STRATEGICREGION_122:0 "서부 캐나다"
+ STRATEGICREGION_123:0 "멕시코"
+ STRATEGICREGION_124:0 "북부 남아메리카"
+ STRATEGICREGION_125:0 "브라질"
+ STRATEGICREGION_126:0 "북아프리카"
+ STRATEGICREGION_127:0 "사하라 사막"
+ STRATEGICREGION_128:0 "이집트"
+ STRATEGICREGION_129:0 "아나톨리아"
+ STRATEGICREGION_130:0 "우크라이나"
+ STRATEGICREGION_131:0 "벨라루스"
+ STRATEGICREGION_132:0 "북부 전선"
+ STRATEGICREGION_133:0 "중앙 러시아"
+ STRATEGICREGION_134:0 "코카서스 지방"
+ STRATEGICREGION_135:0 "쿠반 지방"
+ STRATEGICREGION_136:0 "유라시아 초원"
+ STRATEGICREGION_137:0 "서부 초원"
+ STRATEGICREGION_138:0 "우랄 지역"
+ STRATEGICREGION_139:0 "남아프리카"
+ STRATEGICREGION_140:0 "사하라 이남 아프리카"
+ STRATEGICREGION_141:0 "동부 인도"
+ STRATEGICREGION_142:0 "동남아시아"
+ STRATEGICREGION_143:0 "북부 중국"
+ STRATEGICREGION_144:0 "서부 중국"
+ STRATEGICREGION_145:0 "중앙아시아"
+ STRATEGICREGION_146:0 "히말라야"
+ STRATEGICREGION_147:0 "북부 시베리아"
+ STRATEGICREGION_148:0 "러시아 극동 지역"
+ STRATEGICREGION_149:0 "동부 시베리아"
+ STRATEGICREGION_150:0 "북극 러시아"
+ STRATEGICREGION_151:0 "서부 시베리아"
+ STRATEGICREGION_152:0 "중앙아시아 대초원"
+ STRATEGICREGION_153:0 "북부 인도"
+ STRATEGICREGION_154:0 "일본 열도"
+ STRATEGICREGION_155:0 "만주"
+ STRATEGICREGION_156:1 "호주 남부"
+ STRATEGICREGION_157:0 "뉴질랜드"
+ STRATEGICREGION_158:0 "순다 열도"
+ STRATEGICREGION_159:0 "보르네오"
+ STRATEGICREGION_160:0 "필리핀"
+ STRATEGICREGION_161:0 "아이슬란드"
+ STRATEGICREGION_162:0 "아프가니스탄"
+ STRATEGICREGION_163:0 "아마존"
+ STRATEGICREGION_164:0 "동부 중국"
+ STRATEGICREGION_165:0 "남부 중국"
+ STRATEGICREGION_166:0 "허드슨 만"
+ STRATEGICREGION_167:0 "뉴기니"
+ STRATEGICREGION_168:0 "아드리아 해"
+ STRATEGICREGION_169:0 "티레니아 해"
+ STRATEGICREGION_170:0 "플로리다 해안"
+ STRATEGICREGION_171:0 "북서 연안"
+ STRATEGICREGION_172:0 "태평양 융기선"
+ STRATEGICREGION_173:0 "동부 북해"
+ STRATEGICREGION_174:0 "노르웨이 해안"
+ STRATEGICREGION_175:0 "중앙 태평양"
+ STRATEGICREGION_176:0 "북태평양 중부"
+ STRATEGICREGION_177:0 "북서태평양"
+ STRATEGICREGION_178:0 "서 폴리네시아"
+ STRATEGICREGION_179:0 "프랑스령 폴리네시아"
+ STRATEGICREGION_180:0 "미크로네시아 간극"
+STRATEGICREGION_17_1:1 "아프리카의 뿔"
+STRATEGICREGION_131_1:0 "서부 러시아"
+STRATEGICREGION_181:0 "포강 유역"
+STRATEGICREGION_182:0 "서부 아프리카"
+STRATEGICREGION_183:0 "중부 캐나다"
+STRATEGICREGION_184:0 "캐나다 극지방"
+STRATEGICREGION_185:0 "북서"
+STRATEGICREGION_186:1 "북동"
+STRATEGICREGION_187:0 "아라비아"
