--- a/Kaiserreich Korean Translation/localisation/KR_Supply_Area_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Supply_Area_Names_l_english.yml
@@ -1,358 +1,358 @@
 ﻿l_english:
 
-SUPPLYAREA_1:0 "SupplyArea"
-SUPPLYAREA_2:0 "SupplyArea"
-SUPPLYAREA_3:0 "SupplyArea"
-SUPPLYAREA_4:0 "SupplyArea"
-SUPPLYAREA_5:0 "SupplyArea"
-SUPPLYAREA_6:0 "SupplyArea"
-SUPPLYAREA_7:0 "SupplyArea"
-SUPPLYAREA_8:0 "SupplyArea"
-SUPPLYAREA_9:0 "SupplyArea"
-SUPPLYAREA_10:0 "SupplyArea"
-SUPPLYAREA_11:0 "SupplyArea"
-SUPPLYAREA_12:0 "SupplyArea"
-SUPPLYAREA_13:0 "SupplyArea"
-SUPPLYAREA_14:0 "SupplyArea"
-SUPPLYAREA_15:0 "SupplyArea"
-SUPPLYAREA_16:0 "SupplyArea"
-SUPPLYAREA_17:0 "SupplyArea"
-SUPPLYAREA_18:0 "SupplyArea"
-SUPPLYAREA_19:0 "SupplyArea"
-SUPPLYAREA_20:0 "SupplyArea"
-SUPPLYAREA_21:0 "SupplyArea"
-SUPPLYAREA_22:0 "SupplyArea"
-SUPPLYAREA_23:0 "SupplyArea"
-SUPPLYAREA_24:0 "SupplyArea"
-SUPPLYAREA_25:0 "SupplyArea"
-SUPPLYAREA_26:0 "SupplyArea"
-SUPPLYAREA_27:0 "SupplyArea"
-SUPPLYAREA_28:0 "SupplyArea"
-SUPPLYAREA_29:0 "SupplyArea"
-SUPPLYAREA_30:0 "SupplyArea"
-SUPPLYAREA_31:0 "SupplyArea"
-SUPPLYAREA_32:0 "SupplyArea"
-SUPPLYAREA_33:0 "SupplyArea"
-SUPPLYAREA_34:0 "SupplyArea"
-SUPPLYAREA_35:0 "SupplyArea"
-SUPPLYAREA_36:0 "SupplyArea"
-SUPPLYAREA_37:0 "SupplyArea"
-SUPPLYAREA_38:0 "SupplyArea"
-SUPPLYAREA_39:0 "SupplyArea"
-SUPPLYAREA_40:0 "SupplyArea"
-SUPPLYAREA_41:0 "SupplyArea"
-SUPPLYAREA_42:0 "SupplyArea"
-SUPPLYAREA_43:0 "SupplyArea"
-SUPPLYAREA_44:0 "SupplyArea"
-SUPPLYAREA_45:0 "SupplyArea"
-SUPPLYAREA_46:0 "SupplyArea"
-SUPPLYAREA_47:0 "SupplyArea"
-SUPPLYAREA_48:0 "SupplyArea"
-SUPPLYAREA_49:0 "SupplyArea"
-SUPPLYAREA_50:0 "SupplyArea"
-SUPPLYAREA_51:0 "SupplyArea"
-SUPPLYAREA_52:0 "SupplyArea"
-SUPPLYAREA_53:0 "SupplyArea"
-SUPPLYAREA_54:0 "SupplyArea"
-SUPPLYAREA_55:0 "SupplyArea"
-SUPPLYAREA_56:0 "SupplyArea"
-SUPPLYAREA_57:0 "SupplyArea"
-SUPPLYAREA_58:0 "SupplyArea"
-SUPPLYAREA_59:0 "SupplyArea"
-SUPPLYAREA_60:0 "SupplyArea"
-SUPPLYAREA_61:0 "SupplyArea"
-SUPPLYAREA_62:0 "SupplyArea"
-SUPPLYAREA_63:0 "SupplyArea"
-SUPPLYAREA_64:0 "SupplyArea"
-SUPPLYAREA_65:0 "SupplyArea"
-SUPPLYAREA_66:0 "SupplyArea"
-SUPPLYAREA_67:0 "SupplyArea"
-SUPPLYAREA_68:0 "SupplyArea"
-SUPPLYAREA_69:0 "SupplyArea"
-SUPPLYAREA_70:0 "SupplyArea"
-SUPPLYAREA_71:0 "SupplyArea"
-SUPPLYAREA_72:0 "SupplyArea"
-SUPPLYAREA_73:0 "SupplyArea"
-SUPPLYAREA_74:0 "SupplyArea"
-SUPPLYAREA_75:0 "SupplyArea"
-SUPPLYAREA_76:0 "SupplyArea"
-SUPPLYAREA_77:0 "SupplyArea"
-SUPPLYAREA_78:0 "SupplyArea"
-SUPPLYAREA_79:0 "SupplyArea"
-SUPPLYAREA_80:0 "SupplyArea"
-SUPPLYAREA_81:0 "SupplyArea"
-SUPPLYAREA_82:0 "SupplyArea"
-SUPPLYAREA_83:0 "SupplyArea"
-SUPPLYAREA_84:0 "SupplyArea"
-SUPPLYAREA_85:0 "SupplyArea"
-SUPPLYAREA_86:0 "SupplyArea"
-SUPPLYAREA_87:0 "SupplyArea"
-SUPPLYAREA_88:0 "SupplyArea"
-SUPPLYAREA_89:0 "SupplyArea"
-SUPPLYAREA_90:0 "SupplyArea"
-SUPPLYAREA_91:0 "SupplyArea"
-SUPPLYAREA_92:0 "SupplyArea"
-SUPPLYAREA_93:0 "SupplyArea"
-SUPPLYAREA_94:0 "SupplyArea"
-SUPPLYAREA_95:0 "SupplyArea"
-SUPPLYAREA_96:0 "SupplyArea"
-SUPPLYAREA_97:0 "SupplyArea"
-SUPPLYAREA_98:0 "SupplyArea"
-SUPPLYAREA_99:0 "SupplyArea"
-SUPPLYAREA_100:0 "SupplyArea"
-SUPPLYAREA_101:0 "SupplyArea"
-SUPPLYAREA_102:0 "SupplyArea"
-SUPPLYAREA_103:0 "SupplyArea"
-SUPPLYAREA_104:0 "SupplyArea"
-SUPPLYAREA_105:0 "SupplyArea"
-SUPPLYAREA_106:0 "SupplyArea"
-SUPPLYAREA_107:0 "SupplyArea"
-SUPPLYAREA_108:0 "SupplyArea"
-SUPPLYAREA_109:0 "SupplyArea"
-SUPPLYAREA_110:0 "SupplyArea"
-SUPPLYAREA_111:0 "SupplyArea"
-SUPPLYAREA_112:0 "SupplyArea"
-SUPPLYAREA_113:0 "SupplyArea"
-SUPPLYAREA_114:0 "SupplyArea"
-SUPPLYAREA_115:0 "SupplyArea"
-SUPPLYAREA_116:0 "SupplyArea"
-SUPPLYAREA_117:0 "SupplyArea"
-SUPPLYAREA_118:0 "SupplyArea"
-SUPPLYAREA_119:0 "SupplyArea"
-SUPPLYAREA_120:0 "SupplyArea"
-SUPPLYAREA_121:0 "SupplyArea"
-SUPPLYAREA_122:0 "SupplyArea"
-SUPPLYAREA_123:0 "SupplyArea"
-SUPPLYAREA_124:0 "SupplyArea"
-SUPPLYAREA_125:0 "SupplyArea"
-SUPPLYAREA_126:0 "SupplyArea"
-SUPPLYAREA_127:0 "SupplyArea"
-SUPPLYAREA_128:0 "SupplyArea"
-SUPPLYAREA_129:0 "SupplyArea"
-SUPPLYAREA_130:0 "SupplyArea"
-SUPPLYAREA_131:0 "SupplyArea"
-SUPPLYAREA_132:0 "SupplyArea"
-SUPPLYAREA_133:0 "SupplyArea"
-SUPPLYAREA_134:0 "SupplyArea"
-SUPPLYAREA_135:0 "SupplyArea"
-SUPPLYAREA_136:0 "SupplyArea"
-SUPPLYAREA_137:0 "SupplyArea"
-SUPPLYAREA_138:0 "SupplyArea"
-SUPPLYAREA_139:0 "SupplyArea"
-SUPPLYAREA_140:0 "SupplyArea"
-SUPPLYAREA_141:0 "SupplyArea"
-SUPPLYAREA_142:0 "SupplyArea"
-SUPPLYAREA_143:0 "SupplyArea"
-SUPPLYAREA_144:0 "SupplyArea"
-SUPPLYAREA_145:0 "SupplyArea"
-SUPPLYAREA_146:0 "SupplyArea"
-SUPPLYAREA_147:0 "SupplyArea"
-SUPPLYAREA_148:0 "SupplyArea"
-SUPPLYAREA_149:0 "SupplyArea"
-SUPPLYAREA_150:0 "SupplyArea"
-SUPPLYAREA_151:0 "SupplyArea"
-SUPPLYAREA_152:0 "SupplyArea"
-SUPPLYAREA_153:0 "SupplyArea"
-SUPPLYAREA_154:0 "SupplyArea"
-SUPPLYAREA_155:0 "SupplyArea"
-SUPPLYAREA_156:0 "SupplyArea"
-SUPPLYAREA_157:0 "SupplyArea"
-SUPPLYAREA_158:0 "SupplyArea"
-SUPPLYAREA_159:0 "SupplyArea"
-SUPPLYAREA_160:0 "SupplyArea"
-SUPPLYAREA_161:0 "SupplyArea"
-SUPPLYAREA_162:0 "SupplyArea"
-SUPPLYAREA_163:0 "SupplyArea"
-SUPPLYAREA_164:0 "SupplyArea"
-SUPPLYAREA_165:0 "SupplyArea"
-SUPPLYAREA_166:0 "SupplyArea"
-SUPPLYAREA_167:0 "SupplyArea"
-SUPPLYAREA_168:0 "SupplyArea"
-SUPPLYAREA_169:0 "SupplyArea"
-SUPPLYAREA_170:0 "SupplyArea"
-SUPPLYAREA_171:0 "SupplyArea"
-SUPPLYAREA_172:0 "SupplyArea"
-SUPPLYAREA_173:0 "SupplyArea"
-SUPPLYAREA_174:0 "SupplyArea"
-SUPPLYAREA_175:0 "SupplyArea"
-SUPPLYAREA_176:0 "SupplyArea"
-SUPPLYAREA_177:0 "SupplyArea"
-SUPPLYAREA_178:0 "SupplyArea"
-SUPPLYAREA_179:0 "SupplyArea"
-SUPPLYAREA_180:0 "SupplyArea"
-SUPPLYAREA_181:0 "SupplyArea"
-SUPPLYAREA_182:0 "SupplyArea"
-SUPPLYAREA_183:0 "SupplyArea"
-SUPPLYAREA_184:0 "SupplyArea"
-SUPPLYAREA_185:0 "SupplyArea"
-SUPPLYAREA_186:0 "SupplyArea"
-SUPPLYAREA_187:0 "SupplyArea"
-SUPPLYAREA_188:0 "SupplyArea"
-SUPPLYAREA_189:0 "SupplyArea"
-SUPPLYAREA_190:0 "SupplyArea"
-SUPPLYAREA_191:0 "SupplyArea"
-SUPPLYAREA_192:0 "SupplyArea"
-SUPPLYAREA_193:0 "SupplyArea"
-SUPPLYAREA_194:0 "SupplyArea"
-SUPPLYAREA_195:0 "SupplyArea"
-SUPPLYAREA_196:0 "SupplyArea"
-SUPPLYAREA_197:0 "SupplyArea"
-SUPPLYAREA_198:0 "SupplyArea"
-SUPPLYAREA_199:0 "SupplyArea"
-SUPPLYAREA_200:0 "SupplyArea"
-SUPPLYAREA_201:0 "SupplyArea"
-SUPPLYAREA_202:0 "SupplyArea"
-SUPPLYAREA_203:0 "SupplyArea"
-SUPPLYAREA_204:0 "SupplyArea"
-SUPPLYAREA_205:0 "SupplyArea"
-SUPPLYAREA_206:0 "SupplyArea"
-SUPPLYAREA_207:0 "SupplyArea"
-SUPPLYAREA_208:0 "SupplyArea"
-SUPPLYAREA_209:0 "SupplyArea"
-SUPPLYAREA_210:0 "SupplyArea"
-SUPPLYAREA_211:0 "SupplyArea"
-SUPPLYAREA_212:0 "SupplyArea"
-SUPPLYAREA_213:0 "SupplyArea"
-SUPPLYAREA_214:0 "SupplyArea"
-SUPPLYAREA_215:0 "SupplyArea"
-SUPPLYAREA_216:0 "SupplyArea"
-SUPPLYAREA_217:0 "SupplyArea"
-SUPPLYAREA_218:0 "SupplyArea"
-SUPPLYAREA_219:0 "SupplyArea"
-SUPPLYAREA_220:0 "SupplyArea"
-SUPPLYAREA_221:0 "SupplyArea"
-SUPPLYAREA_222:0 "SupplyArea"
-SUPPLYAREA_223:0 "SupplyArea"
-SUPPLYAREA_224:0 "SupplyArea"
-SUPPLYAREA_225:0 "SupplyArea"
-SUPPLYAREA_226:0 "SupplyArea"
-SUPPLYAREA_227:0 "SupplyArea"
-SUPPLYAREA_228:0 "SupplyArea"
-SUPPLYAREA_229:0 "SupplyArea"
-SUPPLYAREA_230:0 "SupplyArea"
-SUPPLYAREA_231:0 "SupplyArea"
-SUPPLYAREA_232:0 "SupplyArea"
-SUPPLYAREA_233:0 "SupplyArea"
-SUPPLYAREA_234:0 "SupplyArea"
-SUPPLYAREA_235:0 "SupplyArea"
-SUPPLYAREA_236:0 "SupplyArea"
-SUPPLYAREA_237:0 "SupplyArea"
-SUPPLYAREA_238:0 "SupplyArea"
-SUPPLYAREA_239:0 "SupplyArea"
-SUPPLYAREA_240:0 "SupplyArea"
-SUPPLYAREA_241:0 "SupplyArea"
-SUPPLYAREA_242:0 "SupplyArea"
-SUPPLYAREA_243:0 "SupplyArea"
-SUPPLYAREA_244:0 "SupplyArea"
-SUPPLYAREA_245:0 "SupplyArea"
-SUPPLYAREA_246:0 "SupplyArea"
-SUPPLYAREA_247:0 "SupplyArea"
-SUPPLYAREA_248:0 "SupplyArea"
-SUPPLYAREA_249:0 "SupplyArea"
-SUPPLYAREA_250:0 "SupplyArea"
-SUPPLYAREA_251:0 "SupplyArea"
-SUPPLYAREA_252:0 "SupplyArea"
-SUPPLYAREA_253:0 "SupplyArea"
-SUPPLYAREA_254:0 "SupplyArea"
-SUPPLYAREA_255:0 "SupplyArea"
-SUPPLYAREA_256:0 "SupplyArea"
-SUPPLYAREA_257:0 "SupplyArea"
-SUPPLYAREA_258:0 "SupplyArea"
-SUPPLYAREA_259:0 "SupplyArea"
-SUPPLYAREA_260:0 "SupplyArea"
-SUPPLYAREA_261:0 "SupplyArea"
-SUPPLYAREA_262:0 "SupplyArea"
-SUPPLYAREA_263:0 "SupplyArea"
-SUPPLYAREA_264:0 "SupplyArea"
-SUPPLYAREA_265:0 "SupplyArea"
-SUPPLYAREA_266:0 "SupplyArea"
-SUPPLYAREA_267:0 "SupplyArea"
-SUPPLYAREA_268:0 "SupplyArea"
-SUPPLYAREA_269:0 "SupplyArea"
-SUPPLYAREA_270:0 "SupplyArea"
-SUPPLYAREA_271:0 "SupplyArea"
-SUPPLYAREA_272:0 "SupplyArea"
-SUPPLYAREA_273:0 "SupplyArea"
-SUPPLYAREA_274:0 "SupplyArea"
-SUPPLYAREA_275:0 "SupplyArea"
-SUPPLYAREA_276:0 "SupplyArea"
-SUPPLYAREA_277:0 "SupplyArea"
-SUPPLYAREA_278:0 "SupplyArea"
-SUPPLYAREA_279:0 "SupplyArea"
-SUPPLYAREA_280:0 "SupplyArea"
-SUPPLYAREA_281:0 "SupplyArea"
-SUPPLYAREA_282:0 "SupplyArea"
-SUPPLYAREA_283:0 "SupplyArea"
-SUPPLYAREA_284:0 "SupplyArea"
-SUPPLYAREA_285:0 "SupplyArea"
-SUPPLYAREA_286:0 "SupplyArea"
-SUPPLYAREA_287:0 "SupplyArea"
-SUPPLYAREA_288:0 "SupplyArea"
-SUPPLYAREA_289:0 "SupplyArea"
-SUPPLYAREA_290:0 "SupplyArea"
-SUPPLYAREA_291:0 "SupplyArea"
-SUPPLYAREA_292:0 "SupplyArea"
-SUPPLYAREA_293:0 "SupplyArea"
-SUPPLYAREA_294:0 "SupplyArea"
-SUPPLYAREA_295:0 "SupplyArea"
-SUPPLYAREA_296:0 "SupplyArea"
-SUPPLYAREA_297:0 "SupplyArea"
-SUPPLYAREA_298:0 "SupplyArea"
-SUPPLYAREA_299:0 "SupplyArea"
-SUPPLYAREA_300:0 "SupplyArea"
-SUPPLYAREA_301:0 "SupplyArea"
-SUPPLYAREA_302:0 "SupplyArea"
-SUPPLYAREA_303:0 "SupplyArea"
-SUPPLYAREA_304:0 "SupplyArea"
-SUPPLYAREA_305:0 "SupplyArea"
-SUPPLYAREA_306:0 "SupplyArea"
-SUPPLYAREA_307:0 "SupplyArea"
-SUPPLYAREA_308:0 "SupplyArea"
-SUPPLYAREA_309:0 "SupplyArea"
-SUPPLYAREA_310:0 "SupplyArea"
-SUPPLYAREA_311:0 "SupplyArea"
-SUPPLYAREA_312:0 "SupplyArea"
-SUPPLYAREA_313:0 "SupplyArea"
-SUPPLYAREA_314:0 "SupplyArea"
-SUPPLYAREA_315:0 "SupplyArea"
-SUPPLYAREA_316:0 "SupplyArea"
-SUPPLYAREA_317:0 "SupplyArea"
-SUPPLYAREA_318:0 "SupplyArea"
-SUPPLYAREA_319:0 "SupplyArea"
-SUPPLYAREA_320:0 "SupplyArea"
-SUPPLYAREA_321:0 "SupplyArea"
-SUPPLYAREA_322:0 "SupplyArea"
-SUPPLYAREA_323:0 "SupplyArea"
-SUPPLYAREA_326:0 "SupplyArea"
-SUPPLYAREA_325:0 "SupplyArea"
-SUPPLYAREA_327:0 "SupplyArea"
-SUPPLYAREA_328:0 "SupplyArea"
-SUPPLYAREA_329:0 "SupplyArea"
-SUPPLYAREA_330:0 "SupplyArea"
-SUPPLYAREA_331:0 "SupplyArea"
-SUPPLYAREA_332:0 "SupplyArea"
-SUPPLYAREA_333:0 "SupplyArea"
-SUPPLYAREA_334:0 "SupplyArea"
-SUPPLYAREA_335:0 "SupplyArea"
-SUPPLYAREA_336:0 "SupplyArea"
-SUPPLYAREA_337:0 "SupplyArea"
-SUPPLYAREA_338:0 "SupplyArea"
-SUPPLYAREA_339:0 "SupplyArea"
-SUPPLYAREA_340:0 "SupplyArea"
-SUPPLYAREA_341:0 "SupplyArea"
-SUPPLYAREA_342:0 "SupplyArea"
-SUPPLYAREA_343:0 "SupplyArea"
-SUPPLYAREA_344:0 "SupplyArea"
-SUPPLYAREA_345:0 "SupplyArea"
-SUPPLYAREA_346:0 "FaroeIslands"
-SUPPLYAREA_347:0 "JohnstonAtoll"
-SUPPLYAREA_348:0 "Jamaica"
-SUPPLYAREA_349:0 "Ascension"
-SUPPLYAREA_350:0 "DiegoGarcia"
-SUPPLYAREA_351:0 "ChristmasIslands"
-SUPPLYAREA_352:0 "CocosIslands"
-SUPPLYAREA_353:0 "KerguelenIslands"
-SUPPLYAREA_354:0 "SUPPLYAREA_354"
-SUPPLYAREA_355:0 "SUPPLYAREA_355"
-SUPPLYAREA_356:0 "SupplyArea"
-SUPPLYAREA_357:0 "SupplyArea"
+SUPPLYAREA_1:0 "보급지역"
+SUPPLYAREA_2:0 "보급지역"
+SUPPLYAREA_3:0 "보급지역"
+SUPPLYAREA_4:0 "보급지역"
+SUPPLYAREA_5:0 "보급지역"
+SUPPLYAREA_6:0 "보급지역"
+SUPPLYAREA_7:0 "보급지역"
+SUPPLYAREA_8:0 "보급지역"
+SUPPLYAREA_9:0 "보급지역"
+SUPPLYAREA_10:0 "보급지역"
+SUPPLYAREA_11:0 "보급지역"
+SUPPLYAREA_12:0 "보급지역"
+SUPPLYAREA_13:0 "보급지역"
+SUPPLYAREA_14:0 "보급지역"
+SUPPLYAREA_15:0 "보급지역"
+SUPPLYAREA_16:0 "보급지역"
+SUPPLYAREA_17:0 "보급지역"
+SUPPLYAREA_18:0 "보급지역"
+SUPPLYAREA_19:0 "보급지역"
+SUPPLYAREA_20:0 "보급지역"
+SUPPLYAREA_21:0 "보급지역"
+SUPPLYAREA_22:0 "보급지역"
+SUPPLYAREA_23:0 "보급지역"
+SUPPLYAREA_24:0 "보급지역"
+SUPPLYAREA_25:0 "보급지역"
+SUPPLYAREA_26:0 "보급지역"
+SUPPLYAREA_27:0 "보급지역"
+SUPPLYAREA_28:0 "보급지역"
+SUPPLYAREA_29:0 "보급지역"
+SUPPLYAREA_30:0 "보급지역"
+SUPPLYAREA_31:0 "보급지역"
+SUPPLYAREA_32:0 "보급지역"
+SUPPLYAREA_33:0 "보급지역"
+SUPPLYAREA_34:0 "보급지역"
+SUPPLYAREA_35:0 "보급지역"
+SUPPLYAREA_36:0 "보급지역"
+SUPPLYAREA_37:0 "보급지역"
+SUPPLYAREA_38:0 "보급지역"
+SUPPLYAREA_39:0 "보급지역"
+SUPPLYAREA_40:0 "보급지역"
+SUPPLYAREA_41:0 "보급지역"
+SUPPLYAREA_42:0 "보급지역"
+SUPPLYAREA_43:0 "보급지역"
+SUPPLYAREA_44:0 "보급지역"
+SUPPLYAREA_45:0 "보급지역"
+SUPPLYAREA_46:0 "보급지역"
+SUPPLYAREA_47:0 "보급지역"
+SUPPLYAREA_48:0 "보급지역"
+SUPPLYAREA_49:0 "보급지역"
+SUPPLYAREA_50:0 "보급지역"
+SUPPLYAREA_51:0 "보급지역"
+SUPPLYAREA_52:0 "보급지역"
+SUPPLYAREA_53:0 "보급지역"
+SUPPLYAREA_54:0 "보급지역"
+SUPPLYAREA_55:0 "보급지역"
+SUPPLYAREA_56:0 "보급지역"
+SUPPLYAREA_57:0 "보급지역"
+SUPPLYAREA_58:0 "보급지역"
+SUPPLYAREA_59:0 "보급지역"
+SUPPLYAREA_60:0 "보급지역"
+SUPPLYAREA_61:0 "보급지역"
+SUPPLYAREA_62:0 "보급지역"
+SUPPLYAREA_63:0 "보급지역"
+SUPPLYAREA_64:0 "보급지역"
+SUPPLYAREA_65:0 "보급지역"
+SUPPLYAREA_66:0 "보급지역"
+SUPPLYAREA_67:0 "보급지역"
+SUPPLYAREA_68:0 "보급지역"
+SUPPLYAREA_69:0 "보급지역"
+SUPPLYAREA_70:0 "보급지역"
+SUPPLYAREA_71:0 "보급지역"
+SUPPLYAREA_72:0 "보급지역"
+SUPPLYAREA_73:0 "보급지역"
+SUPPLYAREA_74:0 "보급지역"
+SUPPLYAREA_75:0 "보급지역"
+SUPPLYAREA_76:0 "보급지역"
+SUPPLYAREA_77:0 "보급지역"
+SUPPLYAREA_78:0 "보급지역"
+SUPPLYAREA_79:0 "보급지역"
+SUPPLYAREA_80:0 "보급지역"
+SUPPLYAREA_81:0 "보급지역"
+SUPPLYAREA_82:0 "보급지역"
+SUPPLYAREA_83:0 "보급지역"
+SUPPLYAREA_84:0 "보급지역"
+SUPPLYAREA_85:0 "보급지역"
+SUPPLYAREA_86:0 "보급지역"
+SUPPLYAREA_87:0 "보급지역"
+SUPPLYAREA_88:0 "보급지역"
+SUPPLYAREA_89:0 "보급지역"
+SUPPLYAREA_90:0 "보급지역"
+SUPPLYAREA_91:0 "보급지역"
+SUPPLYAREA_92:0 "보급지역"
+SUPPLYAREA_93:0 "보급지역"
+SUPPLYAREA_94:0 "보급지역"
+SUPPLYAREA_95:0 "보급지역"
+SUPPLYAREA_96:0 "보급지역"
+SUPPLYAREA_97:0 "보급지역"
+SUPPLYAREA_98:0 "보급지역"
+SUPPLYAREA_99:0 "보급지역"
+SUPPLYAREA_100:0 "보급지역"
+SUPPLYAREA_101:0 "보급지역"
+SUPPLYAREA_102:0 "보급지역"
+SUPPLYAREA_103:0 "보급지역"
+SUPPLYAREA_104:0 "보급지역"
+SUPPLYAREA_105:0 "보급지역"
+SUPPLYAREA_106:0 "보급지역"
+SUPPLYAREA_107:0 "보급지역"
+SUPPLYAREA_108:0 "보급지역"
+SUPPLYAREA_109:0 "보급지역"
+SUPPLYAREA_110:0 "보급지역"
+SUPPLYAREA_111:0 "보급지역"
+SUPPLYAREA_112:0 "보급지역"
+SUPPLYAREA_113:0 "보급지역"
+SUPPLYAREA_114:0 "보급지역"
+SUPPLYAREA_115:0 "보급지역"
+SUPPLYAREA_116:0 "보급지역"
+SUPPLYAREA_117:0 "보급지역"
+SUPPLYAREA_118:0 "보급지역"
+SUPPLYAREA_119:0 "보급지역"
+SUPPLYAREA_120:0 "보급지역"
+SUPPLYAREA_121:0 "보급지역"
+SUPPLYAREA_122:0 "보급지역"
+SUPPLYAREA_123:0 "보급지역"
+SUPPLYAREA_124:0 "보급지역"
+SUPPLYAREA_125:0 "보급지역"
+SUPPLYAREA_126:0 "보급지역"
+SUPPLYAREA_127:0 "보급지역"
+SUPPLYAREA_128:0 "보급지역"
+SUPPLYAREA_129:0 "보급지역"
+SUPPLYAREA_130:0 "보급지역"
+SUPPLYAREA_131:0 "보급지역"
+SUPPLYAREA_132:0 "보급지역"
+SUPPLYAREA_133:0 "보급지역"
+SUPPLYAREA_134:0 "보급지역"
+SUPPLYAREA_135:0 "보급지역"
+SUPPLYAREA_136:0 "보급지역"
+SUPPLYAREA_137:0 "보급지역"
+SUPPLYAREA_138:0 "보급지역"
+SUPPLYAREA_139:0 "보급지역"
+SUPPLYAREA_140:0 "보급지역"
+SUPPLYAREA_141:0 "보급지역"
+SUPPLYAREA_142:0 "보급지역"
+SUPPLYAREA_143:0 "보급지역"
+SUPPLYAREA_144:0 "보급지역"
+SUPPLYAREA_145:0 "보급지역"
+SUPPLYAREA_146:0 "보급지역"
+SUPPLYAREA_147:0 "보급지역"
+SUPPLYAREA_148:0 "보급지역"
+SUPPLYAREA_149:0 "보급지역"
+SUPPLYAREA_150:0 "보급지역"
+SUPPLYAREA_151:0 "보급지역"
+SUPPLYAREA_152:0 "보급지역"
+SUPPLYAREA_153:0 "보급지역"
+SUPPLYAREA_154:0 "보급지역"
+SUPPLYAREA_155:0 "보급지역"
+SUPPLYAREA_156:0 "보급지역"
+SUPPLYAREA_157:0 "보급지역"
+SUPPLYAREA_158:0 "보급지역"
+SUPPLYAREA_159:0 "보급지역"
+SUPPLYAREA_160:0 "보급지역"
+SUPPLYAREA_161:0 "보급지역"
+SUPPLYAREA_162:0 "보급지역"
+SUPPLYAREA_163:0 "보급지역"
+SUPPLYAREA_164:0 "보급지역"
+SUPPLYAREA_165:0 "보급지역"
+SUPPLYAREA_166:0 "보급지역"
+SUPPLYAREA_167:0 "보급지역"
+SUPPLYAREA_168:0 "보급지역"
+SUPPLYAREA_169:0 "보급지역"
+SUPPLYAREA_170:0 "보급지역"
+SUPPLYAREA_171:0 "보급지역"
+SUPPLYAREA_172:0 "보급지역"
+SUPPLYAREA_173:0 "보급지역"
+SUPPLYAREA_174:0 "보급지역"
+SUPPLYAREA_175:0 "보급지역"
+SUPPLYAREA_176:0 "보급지역"
+SUPPLYAREA_177:0 "보급지역"
+SUPPLYAREA_178:0 "보급지역"
+SUPPLYAREA_179:0 "보급지역"
+SUPPLYAREA_180:0 "보급지역"
+SUPPLYAREA_181:0 "보급지역"
+SUPPLYAREA_182:0 "보급지역"
+SUPPLYAREA_183:0 "보급지역"
+SUPPLYAREA_184:0 "보급지역"
+SUPPLYAREA_185:0 "보급지역"
+SUPPLYAREA_186:0 "보급지역"
+SUPPLYAREA_187:0 "보급지역"
+SUPPLYAREA_188:0 "보급지역"
+SUPPLYAREA_189:0 "보급지역"
+SUPPLYAREA_190:0 "보급지역"
+SUPPLYAREA_191:0 "보급지역"
+SUPPLYAREA_192:0 "보급지역"
+SUPPLYAREA_193:0 "보급지역"
+SUPPLYAREA_194:0 "보급지역"
+SUPPLYAREA_195:0 "보급지역"
+SUPPLYAREA_196:0 "보급지역"
+SUPPLYAREA_197:0 "보급지역"
+SUPPLYAREA_198:0 "보급지역"
+SUPPLYAREA_199:0 "보급지역"
+SUPPLYAREA_200:0 "보급지역"
+SUPPLYAREA_201:0 "보급지역"
+SUPPLYAREA_202:0 "보급지역"
+SUPPLYAREA_203:0 "보급지역"
+SUPPLYAREA_204:0 "보급지역"
+SUPPLYAREA_205:0 "보급지역"
+SUPPLYAREA_206:0 "보급지역"
+SUPPLYAREA_207:0 "보급지역"
+SUPPLYAREA_208:0 "보급지역"
+SUPPLYAREA_209:0 "보급지역"
+SUPPLYAREA_210:0 "보급지역"
+SUPPLYAREA_211:0 "보급지역"
+SUPPLYAREA_212:0 "보급지역"
+SUPPLYAREA_213:0 "보급지역"
+SUPPLYAREA_214:0 "보급지역"
+SUPPLYAREA_215:0 "보급지역"
+SUPPLYAREA_216:0 "보급지역"
+SUPPLYAREA_217:0 "보급지역"
+SUPPLYAREA_218:0 "보급지역"
+SUPPLYAREA_219:0 "보급지역"
+SUPPLYAREA_220:0 "보급지역"
+SUPPLYAREA_221:0 "보급지역"
+SUPPLYAREA_222:0 "보급지역"
+SUPPLYAREA_223:0 "보급지역"
+SUPPLYAREA_224:0 "보급지역"
+SUPPLYAREA_225:0 "보급지역"
+SUPPLYAREA_226:0 "보급지역"
+SUPPLYAREA_227:0 "보급지역"
+SUPPLYAREA_228:0 "보급지역"
+SUPPLYAREA_229:0 "보급지역"
+SUPPLYAREA_230:0 "보급지역"
+SUPPLYAREA_231:0 "보급지역"
+SUPPLYAREA_232:0 "보급지역"
+SUPPLYAREA_233:0 "보급지역"
+SUPPLYAREA_234:0 "보급지역"
+SUPPLYAREA_235:0 "보급지역"
+SUPPLYAREA_236:0 "보급지역"
+SUPPLYAREA_237:0 "보급지역"
+SUPPLYAREA_238:0 "보급지역"
+SUPPLYAREA_239:0 "보급지역"
+SUPPLYAREA_240:0 "보급지역"
+SUPPLYAREA_241:0 "보급지역"
+SUPPLYAREA_242:0 "보급지역"
+SUPPLYAREA_243:0 "보급지역"
+SUPPLYAREA_244:0 "보급지역"
+SUPPLYAREA_245:0 "보급지역"
+SUPPLYAREA_246:0 "보급지역"
+SUPPLYAREA_247:0 "보급지역"
+SUPPLYAREA_248:0 "보급지역"
+SUPPLYAREA_249:0 "보급지역"
+SUPPLYAREA_250:0 "보급지역"
+SUPPLYAREA_251:0 "보급지역"
+SUPPLYAREA_252:0 "보급지역"
+SUPPLYAREA_253:0 "보급지역"
+SUPPLYAREA_254:0 "보급지역"
+SUPPLYAREA_255:0 "보급지역"
+SUPPLYAREA_256:0 "보급지역"
+SUPPLYAREA_257:0 "보급지역"
+SUPPLYAREA_258:0 "보급지역"
+SUPPLYAREA_259:0 "보급지역"
+SUPPLYAREA_260:0 "보급지역"
+SUPPLYAREA_261:0 "보급지역"
+SUPPLYAREA_262:0 "보급지역"
+SUPPLYAREA_263:0 "보급지역"
+SUPPLYAREA_264:0 "보급지역"
+SUPPLYAREA_265:0 "보급지역"
+SUPPLYAREA_266:0 "보급지역"
+SUPPLYAREA_267:0 "보급지역"
+SUPPLYAREA_268:0 "보급지역"
+SUPPLYAREA_269:0 "보급지역"
+SUPPLYAREA_270:0 "보급지역"
+SUPPLYAREA_271:0 "보급지역"
+SUPPLYAREA_272:0 "보급지역"
+SUPPLYAREA_273:0 "보급지역"
+SUPPLYAREA_274:0 "보급지역"
+SUPPLYAREA_275:0 "보급지역"
+SUPPLYAREA_276:0 "보급지역"
+SUPPLYAREA_277:0 "보급지역"
+SUPPLYAREA_278:0 "보급지역"
+SUPPLYAREA_279:0 "보급지역"
+SUPPLYAREA_280:0 "보급지역"
+SUPPLYAREA_281:0 "보급지역"
+SUPPLYAREA_282:0 "보급지역"
+SUPPLYAREA_283:0 "보급지역"
+SUPPLYAREA_284:0 "보급지역"
+SUPPLYAREA_285:0 "보급지역"
+SUPPLYAREA_286:0 "보급지역"
+SUPPLYAREA_287:0 "보급지역"
+SUPPLYAREA_288:0 "보급지역"
+SUPPLYAREA_289:0 "보급지역"
+SUPPLYAREA_290:0 "보급지역"
+SUPPLYAREA_291:0 "보급지역"
+SUPPLYAREA_292:0 "보급지역"
+SUPPLYAREA_293:0 "보급지역"
+SUPPLYAREA_294:0 "보급지역"
+SUPPLYAREA_295:0 "보급지역"
+SUPPLYAREA_296:0 "보급지역"
+SUPPLYAREA_297:0 "보급지역"
+SUPPLYAREA_298:0 "보급지역"
+SUPPLYAREA_299:0 "보급지역"
+SUPPLYAREA_300:0 "보급지역"
+SUPPLYAREA_301:0 "보급지역"
+SUPPLYAREA_302:0 "보급지역"
+SUPPLYAREA_303:0 "보급지역"
+SUPPLYAREA_304:0 "보급지역"
+SUPPLYAREA_305:0 "보급지역"
+SUPPLYAREA_306:0 "보급지역"
+SUPPLYAREA_307:0 "보급지역"
+SUPPLYAREA_308:0 "보급지역"
+SUPPLYAREA_309:0 "보급지역"
+SUPPLYAREA_310:0 "보급지역"
+SUPPLYAREA_311:0 "보급지역"
+SUPPLYAREA_312:0 "보급지역"
+SUPPLYAREA_313:0 "보급지역"
+SUPPLYAREA_314:0 "보급지역"
+SUPPLYAREA_315:0 "보급지역"
+SUPPLYAREA_316:0 "보급지역"
+SUPPLYAREA_317:0 "보급지역"
+SUPPLYAREA_318:0 "보급지역"
+SUPPLYAREA_319:0 "보급지역"
+SUPPLYAREA_320:0 "보급지역"
+SUPPLYAREA_321:0 "보급지역"
+SUPPLYAREA_322:0 "보급지역"
+SUPPLYAREA_323:0 "보급지역"
+SUPPLYAREA_326:0 "보급지역"
+SUPPLYAREA_325:0 "보급지역"
+SUPPLYAREA_327:0 "보급지역"
+SUPPLYAREA_328:0 "보급지역"
+SUPPLYAREA_329:0 "보급지역"
+SUPPLYAREA_330:0 "보급지역"
+SUPPLYAREA_331:0 "보급지역"
+SUPPLYAREA_332:0 "보급지역"
+SUPPLYAREA_333:0 "보급지역"
+SUPPLYAREA_334:0 "보급지역"
+SUPPLYAREA_335:0 "보급지역"
+SUPPLYAREA_336:0 "보급지역"
+SUPPLYAREA_337:0 "보급지역"
+SUPPLYAREA_338:0 "보급지역"
+SUPPLYAREA_339:0 "보급지역"
+SUPPLYAREA_340:0 "보급지역"
+SUPPLYAREA_341:0 "보급지역"
+SUPPLYAREA_342:0 "보급지역"
+SUPPLYAREA_343:0 "보급지역"
+SUPPLYAREA_344:0 "보급지역"
+SUPPLYAREA_345:0 "보급지역"
+SUPPLYAREA_346:0 "페로제도"
+SUPPLYAREA_347:0 "존스턴환초"
+SUPPLYAREA_348:0 "자메이카"
+SUPPLYAREA_349:0 "어센션 섬"
+SUPPLYAREA_350:0 "디에고가르시아"
+SUPPLYAREA_351:0 "크리스마스 섬"
+SUPPLYAREA_352:0 "코코스 제도"
+SUPPLYAREA_353:0 "케르겔렌 제도"
+SUPPLYAREA_354:0 "보급지역"
+SUPPLYAREA_355:0 "보급지역"
+SUPPLYAREA_356:0 "보급지역"
+SUPPLYAREA_357:0 "보급지역"
